--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -76,9 +76,204 @@
 
 
 
+    <a></a>
+    [아주 작은 습관의 힘 64-65p] 습관이 우리의 정체성을 형성하고, 우리의 정체성은 습관을 형성한다. 이는 쌍방향으로 작용한다. 모든 습관 형성은 이런 순환 고리를 가지고 있다.<br>
+    중요한 건 결과보다 나 자신이 가지고 있는 가치, 원칙, 정체성이 좀 더 순환돼야 한다는 점이다. 초점은 늘 어떤 사람이 되는 것이어야지, 어떤 결과를 얻어내겠다는 데 있으면 안 된다.
+    <br><br>
 
+    <a></a>
+    [아주 작은 습관의 힘 63-64p] 새로운 정체성이 형성되려면 새로운 증거가 필요하다. 늘 주던 곳에 표를 주고 있다면 늘 얻던 결과를 얻을 뿐이다. 바뀐 게 아무것도 없다면 아무것도 변화하지 않는다. 변화는 다음의 간단한 두 단계로 이뤄진다.<br>
+    1. 어떤 사람이 되고 싶은지 결정한다.<br>
+    2. 작은 성공들로 스스로에게 증명한다.<br>
+    먼저 자신이 어떤 사람이 되고 싶은지 결정하라. 개인으로서든, 집단으로서든, 지역사회든, 국가든 자신이 되고 싶고 원하는 상은 누구나 가지고 있다. 당신은 어떤 것을 대변하고 싶은가? 당신의 주요 기준과 가치들은 무엇인가? 어떤 사람이 되길 바라는가?<br>
+    이는 중대한 질문이다. 많은 사람이 어디서부터 시작해야 할지 확신하지 못하고 있지만 우리는 어떤 결과를 얻어내고 싶은지는 알고 있다. 복부에 식스팩을 새기겠다든가, 화를 덜 내겠다든가, 연봉을 두배로 올려 받겠다든가 말이다. 그거면 됐다. 여기서부터 시작해서 결과들을 되짚어나가면서 그것들을 얻어낼 수 있는 사람이 어떤 사람인지 알아보면 된다.<br>
+    스스로에게 물어보자. 내가 원하는 결과를 얻은 사람은 어떤 사람인가? 20킬로그램을 감량한 사람은 어떤 사람인가? 새로운 언어를 구사할 수 있는 사람은 어떤 사람인가? 성공적인 스타트업을 운영할 수 있는 사람은 어떤 사람인가?
+    <br><br>
 
+    <a></a>
+    [아주 작은 습관의 힘 62-63p] 모든 행동이 내가 되고자 하는 어떤 유형을 제시한다. 어느 한순간의 사건이 자신의 믿음을 바꾸지는 못하겠지만, 이런 투표지들이 차곡차곡 쌓이면 이는 새로운 정체성의 증거가 된다. 이처럼 작은 습관들은 새로운 정체성에 대한 증거를 제공함으로써 의미 있는 차이를 만들어낸다. 변화가 의미 있다면, 실제로 그건 큰 변화다.<br>
+    이 작은 변화들을 한데 모으면 습관이 정체성을 변화시키는 경로임을 알게 될 것이다. 자신을 바꾸는 가장 확실한 방법은 자신이 하는 일을 변화시키는 것이다.<br>
+    * 글을 한 페이지 쓰는 매 순간 나는 글 쓰는 사람이다.<br>
+    * 바이올린을 연습하는 매 순간 나는 음악 하는 사람이다.<br>
+    * 운동을 시작한 매 순간 나는 운동하는 사람이다.<br>
+    * 직원들의 힘을 북돋는 매 순간 나는 리더다.<br>
+    작은 습관 하나하나는 각각의 결과를 얻게 해줄 뿐 아니라 더 중요한 것을 가르쳐준다. 바로 스스로를 신뢰하게 만들어준다. 우리는 이제 이런 일들을 실제로 해낼 수 있다는 걸 믿게 된다. 투표지가 점점 쌓이고 증거가 모이기 시작하면 스스로에게 하는 이야기 역시 변화하기 시작한다.<br>
+    물론 반대의 경우가 생길 수도 있다. 우리가 나쁜 습관을 형성하는 선택을 하면 그때마다 그런 정체성에 관한 투표지가 쌓인다. 하지만 다행이도 어떤 선거든 투표는 양쪽에 한다. 당선되기 위해 투표 결과가 만장일치일 필요는 없다. 그저 다수의 표를 얻으면 된다. 나쁜 행위, 비생산적인 습관에 관한 표가 적다면 문제없다. 목표는 다수의 표를 얻는 것이다.
+    <br><br>
 
+    <a></a>
+    [아주 작은 습관의 힘 61p] 물론 우리의 정체성에 영향을 미치는 행동만이 습관이 되는 것은 아니다. 자주 받복하는 행동도 습관이 되며, 대개 그런 반복이 습관형성에 매우 중요한 요소가 된다. 삶에서의 경험 하나하나는 자아상을 조정한다. 그렇지만 공을 한 번 찼다고 해서 누구나 스스로를 축구하는 사람으로 여기진 않는다. 그림 한 장 그렸다고 그림 그리는 사람으로 여기지도 않는다. 하지만 이런 행위를 반복해나가면 증거가 서서히 쌓이고, 자아상이 변화하기 시작한다.<br>
+    한 번의 특별한 경험은 그 영향력이 서서히 사라지지만, 습관은 시간과 함께 그 영향력이 더욱 강화된다. 즉, 습관은 정체성을 형성하는 가장 큰 증거가 되는 것이다. 이런 관점에서 습관을 세운다는 것은 자기 자신을 만들어나가는 과정이기도 하다.<br>
+    이는 점진적인 변화다. 아주 작은 노력 하나, 완전히 변화하겠다고 결심하는 것만으로 우리는 변화하지 않는다. 우리는 조금씩, 매일매일, 하나하나식 변화한다. 자아는 아주 미세하게 지속적으로 진화해나간다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 59-60p] 정체성은 습관에서 나온다. 우리는 어머니 배 속에서부터 어떤 정체성을 가지고 태어나진 않는다. 정체성은 경험을 통해 습득되고 익숙해진다.<br>
+    엄밀히 말하면 습관은 정체성을 만들어나간다.<br>
+    * 매일 침구를 정돈한다면 나는 체계적 인간이라는 정체성을 만드는 것이다.<br>
+    * 매일 글을 쓴다면 창조적인 사람이라는 정체성을 만드는 것이다.<br>
+    * 매일 운동을 한다면 운동하는 사람이라는 정체성을 만드는 것이다.<br>
+    행위를 반복해나갈수록 그 행위와 연관된 정체성은 강화된다. '정체성(identity)'이라는 말은 '실재하다'라는 의미의 라틴어 'essentitas'와 '반복적으로'를 뜻하는 'identidem'에서 파생되었다. '반복된 실재'라는 말이다.<br>
+    나 자신의 정체성이 지금 당장 무엇이든 간에 우리는 오로지 그것을 믿는다. 정체성에 대한 증거를 가지고 있기 때문이다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 57-59p] 자신의 정체성에 맞는 일을 실행하기는 쉽다. 그래서 행동과 정체성이 완전히 조화를 이루면 더 이상 행동 변화를 추구하지 않아도 된다. 이미 스스로 그렇다고 믿고 있는 유형의 사람처럼 행동하기만 하면 된다.<br>
+    습관 형성과 관련된 다른 모든 측면들처럼 이 역시 양날의 검이다. 이것이 나를 위해 작용하면 그 변화는 자기계발의 강력한 추동력이 된다. 이것이 나와 반대로 작용하면 저주가 될 수도 있다. 일단 어떤 정체성을 수용하면 그에 따라 변화가 이뤄지기 쉽다. 많은 사람이 스스로 인지하지 못한 상태에서 자신의 정체성이라고 생각하는 규범을 맹목적으로 따르며 살아간다.<br>
+    * 난 지시받는 게 끔찍하게 싫어.<br>
+    * 난 아침형 인간이 아니야.<br>
+    * 난 사람들 이름을 잘 기억 못 해.<br>
+    * 난 늘 지각해.<br>
+    * 난 기계랑 친하지 않아.<br>
+    * 난 수학을 정말 못해.<br>
+    이 밖에도 수천 가지 다양한 유형이 존재한다.<br>
+    수년 동안 스스로에게 한 가지 이야기를 반복해서 들려주면 어느새 익숙해져서 이를 사실로 받아들이기 쉽다. 그러면서 어떤 특정한 행동에 '그 일은 나답지 않아'라면서 저항하기 시작한다. 자아상을 유지하기 위해 스스로를 압박하고, 그 믿음에 부합하는 방식으로 행동하는 것이다. 자신이 아닌 것, 자신과 반대되는 것을 피하려고 한다.<br>
+    자신의 성향과 관계된 어떤 생각이나 행동이 심화될수록 그것을 바꾸기는 더욱 어려워진다. 자신의 문화적 믿음(집단 성향), 자아상을 지탱하는 일을 하는 것(개인 성향)은 설령 잘못된 것일지라도 일단은 믿는 게 편안할 수 있다. 개인이든, 집단 또는 사회든 긍정적인 변화를 가로막는 가장 큰 장벽은 정체성 갈등이다. 좋은 습관들이 합리적으로 느껴질 수는 있지만 자신의 정체성과 대립한다면 행동으로 옮기지는 못할 것이다.<br>
+    어느 날 너무 바쁘거나 지치거나 부담되어서, 또는 수백 가지 다른 이유로 우리는 습관을 유지하기가 힘들어진다. 하지만 장기적으로 그 습관을 유지하지 못하는 진짜 이유는 자신의 자아상과 반대이기 때문이다. 이것이 어떤 한 가지 모습의 정체성에 집착하면 안 되는 이유다. 자신이 바라는 최고의 모습이 되려면 자신의 믿음들을 끊임없이 편집하고, 자기 정체성을 수정하고 확장해야만 한다.<br>
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 55-56p] 본질적인 동기가 최종적인 결과로 나타나는 것은 습관이 정체성의 일부가 될 때다. "나는 이런 것을 '원하는' 사람이야."라고 말하는 것은 "나는 '이런' 사람이야."라고 말하는 것과는 매우 다르다.<br>
+    자신의 어떤 모습에 자부심을 가질수록 그와 관련된 습관들을 유지하고 싶어진다. 머리 스타일에 자부심이 있다면 그 스타일을 유지하기 위해 머리를 관리하는 온갖 습관을 갖게 된다. 이두박근 크기에 자부심이 있다면 상체 운동을 빼먹지 않을 것이다. 자신이 짠 목도리에 자부심이 있다면 매주 뜨개질을 하는 시간이 늘어날 것이다. 일단 뭔가와 관련해 자부심이 생기면 이를 위한 습관을 유지하려고 필사적으로 애쓸 것이다.<br>
+    진정한 행동 변화는 정체성 변화에 있다. 우리는 무언가가 되고 싶어 그와 관련된 습관을 시작한다. 하지만 그 습관을 꾸준히 해나가는 건 오직 그것이 자기 정체성의 일부가 될 때뿐이다.<br>
+    누구든 한두 번쯤 체육관에 가거나 건강한 음식을 먹을 수 있다. 하지만 그 행동 뒤에 자리한 믿음이 변화하지 않는다면 장기적으로 그 변화가 유지되기 힘들다. 변화는 '나'라는 사람을 구성하는 특성의 일부가 되기 전까지는 일시적일 뿐이다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 48p] 목표 설정의 목적은 게임에서 이기는 것이다. 반면 시스템 구축의 목적은 게임을 계속 해나가는 것이다. 장기적으로 발전하기 위해서는 목표 설정보다는 시스템을 구축해야 한다. 성취하는 것이 아니라 계속해서 개선하고 발전해나가는 순환 고리를 만드는 것이다. 즉, '과정'에 전념하는 것이 '발전'을 결정한다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 46-47p] 목표 뒤에는 이런 가정이 내포되어 있다. '목표에 도달하면 행복해질 거야.' 목표를 우선으로 생각하는 태도의 문제는 다음 표지판에 도달할 때까지 행복을 계속 미룬다는 것이다. 나는 수없이 이런 함정에 빠져 내가 뭘 하는지 잊곤 했다. 수년 동안 나에게 행복이란 미래에 있는 것이었다. 근육을 10킬로그램 증량하기만 하면, 내 사업이 <뉴욕 타임스>에 실리면 그제야 행복해지고 쉴 수 있을 거라고 여겼다.<br>
+    게다가 목표는 '이것 아니면 저것'이라는 양자택일적 갈등을 만들어낸다. 목표를 달성하면 성공하는 것이고, 달성하지 못하면 실패하는 것이라고 말이다. 그러면 스스로 행복에 대한 좁은 시야 안에 갇히고 만다. 이는 오판이다. 실제 삶의 행로는 우리가 마음속으로 정해놓은 여정과 정확히 일치하지 않는다. 성공으로 가는 길은 수없이 많다. 굳이 하나의 시나리오에만 자신의 길을 맞출 이유는 없다.<br>
+    시스템 우선주의는 그 해독제를 제공한다. 결과가 아니라 과정을 좋아하게 되면 '이제 행복해져도 돼'라고 말할 시기를 기다리지 않아도 된다. 시스템이 작동하고 있다면 어느 때건 만족할 수 있기 때문이다. 시스템은 우리가 처음 상상했던 한 가지 결과가 아니라 다양한 형태로 성공할 수 있게 해준다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 46p] 목표를 달성하는 것은 우리 인생의 '한순간'을 변화시킬 뿐이다. 이는 '개선'과는 다르다. 우리는 결과를 바꿔야 한다고 생각하지만 사실 그 결과는 문제가 아니다. 진짜로 해야 할 일은 결과를 유발한느 시스템을 바꾸는 것이다. 결과 수준에서 문제를 해결하려고 하면 이는 임시방편일 뿐이다. 영원히 개선하고자 한다면 결과가 아니라 시스템 단계에서 문제를 해결해야 한다. 입력 값을 고쳐야 결과 값이 바뀐다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 45p] 목표 설정에 집중하다 보면 심각한 승자 편향적 사고에 매몰될 수 있다. 우리는 승리한 사람들에게 집중한다. 야심 찬 목표가 그들의 성공을 이끌었다고 추측하는 실수를 범하고, 누구나 목표를 가지고 있지만 모두가 성공한 것은 아니라는 사실을 간과한다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 41-42p] 세상이 날 외면했다고 여겨질 때 나는 석공을 찾아간다. 석공이 100번 망치를 내리치지만 돌에는 금조차 가지 않는다. 101번째 내리치자 돌이 둘로 가라진다. 나는 그 마지막 타격으로 돌이 갈라진 게 아님을 알고 있다. 그건 그전에 계속 내리친 일들의 결과다. - 야콥 리스
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 41p] 좋은 습관을 세우느라, 또는 나쁜 습관을 버리느라 고군분투하고 있다면 이는 진전이 없는 게 아니라 아직 잠재력 잠복기를 넘어서지 못한 것일 뿐이다. 열심히 하는데 성과가 없다고 불평하는 건 온도가 영하 4도에서 영하 1도까지 올라가는 동안 왜 얼음이 녹지 않느냐고 불평하는 것과 같다. 노력은 결코 헛되지 않다. 쌓이고 있다. 모든 일은 0도가 되어야 일어난다.<br>
+    마침내 잠재력 잠복기를 돌파하고 나면 모르는 사람들은 하룻밤 사이에 성공했다고 말할 것이다. 세상은 그 모든 과정이 아니라 가장 극적인 사건만 본다. 하지만 자신은 얼마나 오랫동안 그 일을 해왔는지 안다. 한 발자국도 나아가지 못한 것 같을 때도 계속 밀어붙여서 결국에는 오늘이 만들어졌음을 안다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 37-38p] 일상의 습관들이 아주 조금만 바뀌어도 우리의 인생은 전혀 다른 곳으로 나아갈 수 있다. 1퍼센트 나아지거나 나빠지는 건 그 순간에는 큰 의미가 없어 보이지만 그런 순간들이 평생 쌓여 모인다면 이는 내가 어떤 사람이 되어 있을지, 어떤 사람이 될 수 있을지의 차이를 결정하게 된다. 성공은 일상적인 습관의 결과다. 우리으 ㅣ삶은 한순간의 변화로 만들어지는 것이 아니다.<br>
+    지금 당장 어떤 방법이 성공적이든 성공적이지 않든 그것이 중요하진 않다. 중요한 건 우리가 가지고 있는 습관이 성공으로 가는 경로에 있느냐는 것이다. 현재 일어난 결과보다 지금 어디에 서 있느냐가 훨씬 더 중요하다.<br>
+    백만장자라 해도 매달 버는 것보다 쓰는 게 더 많다면 나쁜 궤도에 있는 셈이다. 습관을 바꾸려고 노력하지 않는다면 결과는 좋게 나오지 않는다. 반대로 지금 파산했다 해도 매달 조금씩 저축하고 있다면 경제적 자립으로 가는 길 위에 서 있는 것이다. 비록 자신이 바라는 것보다 훨씬 느릴지라도 말이다.<br>
+    결과는 그동안의 습관이 쌓인 것이다. 순자산은 그동안의 경제적 습관이 쌓인 결과다. 몸무게는 그동안의 식습관이 쌓인 결과이고, 지식은 그동안의 학습 습관이 쌓인 결과다. 방 안의 잡동사니들은 그동안의 청소 습관이 쌓인 결과다. 우리는 우리가 반복해서 했던 일의 결과를 얻는다.<br>
+    자신의 인생이 어디로 갈지 궁금한가? 자잘한 발전과 퇴보를 그래프로 그려보고 매일의 선택이 10년, 20년 후를 어떻게 그려나가는지 확인해보라. 당신은 매달 버는 것보다 덜 쓰는가? 매주 체육관에 가는가? 매일 책을 읽거나 새로운 것을 배우고 있는가? 이런 작은 분투가 우리의 미래를 규정한다.<br>
+    시간은 성공과 실패 사이의 간격을 벌려놓는다. 우리가 어디에 시간을 들였든 그것은 복리로 증가한다. 좋은 습관은 시간을 내 편으로 만들지만 나쁜 습관은 시간을 적으로 만든다. 습관은 양날의 검이다. 좋은 습관은 우리를 성장시키지만 나쁜 습관은 우리를 쓰러뜨린다. 그래서 매일 하는 일들 하나하나가 중요하다. 습관이 어떻게 작용하고, 또 어떻게 해야 우리가 좋아하는 것들로 삶을 채워나갈 수 있는지 알아야 위험한 칼날을 피할 수 있다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 34-36p] 습관은 복리로 작용한다. 돈이 복리로 불어나듯이 습관도 반복되면서 그 결과가 곱절로 불어난다. 어느 날 어느 순간에는 아주 작은 차이여도, 몇 달 몇 년이 지나면 그 영향력은 어마어마해질 수 있다. 2년, 5년, 10년 후를 생각해보라. 좋은 습관의 힘과 나쁜 습관의 대가는 현저한 차이를 드러낼 것이다.<br>
+    그러나 매일 이것을 느끼고 감사하기엔 어려울 수도 있다. 우리는 작은 변화들을 무시한다. 그 순간에는 그리 중요하게 보이지 않기 때문이다.<br>
+    지금 당장 돈을 조금 아낀다고 해서 백만장자가 되지는 않는다. 사흘 연속 체육관에 가도 멋진 몸이 만들어지진 않는다. 오늘 밤 한 시간 동안 중국어를 공부해도 중국어로 말하진 못한다. 그저 아주 작은 변화가 있을 뿐, 그 결과는 당장 눈에 보이지 않는다. 그렇다 보니 우리는 수비게 이전의 일상으로 돌아간다.<br>
+    불행히도 변화는 느리게 일어난다. 우리는 곧 나쁜 습관으로 돌아간다. 오늘 정크푸드를 먹었다 해도 체중계 바늘이 바꾸진 않는다. 오늘 밤늦게까지 일하고 가족을 소홀히 한다 해도 가족은 우리를 이해해준다. 오늘 할 일을 내일로 미뤄도 대개는 제시간에 끝마치게 된다. 결심은 잊히기 쉽다.<br>
+    하지만 좋지 못한 결심들, 사소한 실수들, 작은 변명들을 매일같이 반복하면서 1퍼센트씩 잘못을 계속해나가면 이 작은 선택들은 해로운 결과들을 켜켜이 쌓아간다. 잘못 내디딘 한 발자국, 지금 1퍼센트의 퇴보가 조금씩 쌓여 결과적으로 문제가 발생한다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 34p] 어떤 중요한 순간은 과대평가되는 반면, 매일의 사소한 진전들은 과소평가되기 쉽다. 흔히 우리는 대단한 행위가 있어야만 성공할 수 있다고 확신한다. 살을 빼고, 회사를 설립하고, 책을 쓰고, 챔피언십을 따내는 등 어떤 목표를 이루려면 어마어마한 개선이 있어야 한다고 생각하며 자신을 압박한다.<br>
+    1퍼센트의 성장은 눈에 띄지 않는다. 가끔은 전혀 알아차리지 못할 때도 있다. 하지만 이는 무척이나 의미 있는 일이다. 특히 장기적인 관점에서는 더욱 그렇다. 지극히 작은 발전은 시간이 흐르면 믿지 못할 만큼 큰 차이로 나타날 수 있다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 21p] 위대한 책을 쓰고 싶다면 자신이 먼저 그 책이 되어야 한다. - 나발 라비칸트
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 19p] 살다 보면 누구나 도전적인 순간들에 직면한다. (중략) 더 이상 아무것도 할 수 없을 것 같았던 그때, 조금씩 시도한 아주 작은 일들이 나를 바꾸었다. 사소하고 별것 아닌 일이라도 몇 년 동안 꾸준히 해나가면 정말로 놀랄 만한 결과가 나타난다.<br>
+    우리 모두 인생에서 불행을 겪지만 장기적으로 볼 때 인생은 대개 습관으로 결정되곤 한다. 모두 똑같은 습관을 가지고 있다면 누구라도 똑같은 결과밖에 나오지 않는다. 하지만 다른 사람들보다 더 좋은 습관을 가지고 있다면 더 좋은 결과를 만들어낼 수 있다.<br>
+    물론 하루아침에 믿기지 않는 성공을 거둔 사람들도 있을 것이다. 하지만 적어도 내 주변에는 그런 사람이 없다. 나 역시 그런 사람이 아니다. 혼수상태에 빠진 날부터 전미대학 대표선수에 선출될 때까지 단 한순간도 극적인 전환점이란 없었다. 오랜 시간 수많은 순간들이 지금의 나를 있게 한 전환점이었다. 자잘한 승리들과 사소한 돌파구들이 모여서 점진적인 발전이 이뤄졌다.
+    <br><br>
+
+    <a></a>
+    [네 가지 약속 57p] 이런 유형의 주문은 풀기가 어렵다. 주문을 풀 수 있는 유일한 방법은 진실에 바탕을 둔 새로운 약속을 하는 것뿐이다. 진실은 말로 죄를 짓지 않는 데 가장 중요한 역할을 한다. 칼날의 한쪽은 사악한 마법을 낳는 거짓말이고, 반대쪽은 사악한 마법의 주문을 풀 수 있는 진실이다. 오로지 진실만이 사람들을 자유롭게 해줄 수 있다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 205p] 내려놓을수록 자유롭고, 자유로울수록 더 높이 날고, 높이 날수록 더 많이 본다. 가는 실에라도 묶인 새는 날지 못한다. 새는 자유를 위해 나는 것이 아니라, 나는 것 자체가 자유이다. 다시 오지 않을 현재의 순간을 사랑하고, 과거 분류하기를 멈추는 것. 그것이 바람을 가르며 나는 새의 모습이다. 자신이 어디로 가고 있는지 몰라도 날개를 펼치고 있는 한 바람이 당신을 데려갈 것이다. 새는 날갯깃에 닿는 그 바람을 좋아한다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 204p] 나무에 앉은 새는 가지가 부러질까 두려워하지 않는다. 새는 나무가 아니라 자신의 날개를 믿기 때문이다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 178p] 우리는 불확실하게 존재하다가 사랑받음으로써 비로소 확실한 존재를 인정받는다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 168p] 공격과 치유는 둘 다 공명 현상이다. 어떤 에너지를 보내는가에 따라 동일한 에너지가 돌아온다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 164-165p] 당신이 추구의 길에 있을 때, 누군가가 자신이 모든 해답을 알고 있다고 말하면 그를 따르지 말아야 한다. 그 해답은 당신의 목적지가 아닌 그의 목적지로 데려갈 것이기 때문이다. 목말라하는 당신을 위한다고 바다를 주려고 하는 사람은 믿지 말아야 한다. 그것이 당신의 갈증을 해결해 주지는 못하기 때문이다. 빛을 찾는 당신에게 누군가가 하늘을 가져다준다면 당신은 오히려 눈이 멀 것이다.<br>
+    그렇다면 왜 세상에는 자신이 모든 진리를 알고 있다고 주장하는 이들이 이토록 많은가. 바다와 하늘을 줄 수 있다고 말하는 이들이. 그것은 우리가 그들을 원하기 때문이다. 우리 스스로 추종자가 될 마음을 이미 갖고 있기 때문이다. 작은 이정표에 의지해 혼자 힘으로 길을 찾아 나갈 인내력을 서둘러 포기했기 때문이다. 불확실성과 껴안기를 두려워하기 때문이다. 벽에 누군가가 문을 그려 놓았다고 해서 문이 아니다. 단지 그것이 문이라고 우리의 마음이 세뇌당했을 뿐이다. 문은 우리 스스로 벽을 뚫어야 만들어진다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 164p] 노르웨이를 대표하는 3인의 현대 시인 중 한 명인 올라브 H. 하우게의 시가 있다<br>
+    모든 진리를 가지고 나에게 오지 말라<br>
+    내가 목말라한다고 바다를 가져오지는 말라<br>
+    내가 빛을 찾는다고 하늘을 가져오지는 말라<br>
+    다만 하나의 암시, 이슬 몇 방울, 파편 하나를 보여달라<br>
+    호수에서 나온 새가 물방울 몇 개 묻혀 나르듯<br>
+    바람이 소금 알갱이 하나 실어 나르듯
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 163p] 상처는 설명을 듣는다고 낫지 않으며, 시간이 걸려야 아물고 세살이 돋는다. 의문이 깊으면 문이 열린다. 문제를 살아야만 해답을 발견할 수 있다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 149p] 즐겁고, 자유롭고, 자발적으로 사는 것을 방해하는 교리들은 잘못 베낀 것일 가능성이 높다. 모든 정의와 도그마를 넘어 두려움 없이 지금 이 순간의 삶 속으로 들어간다면 언제든 진리를 발견할 수 있다. 그것이 살아 있는 경전이다. 인생은 필사본이 아니라 각자 스스로 써 나가는 책이다. 우리는 예술가이며 예술 그 자체이다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 147p] '우리는 인간이라는 경험을 하는 영적 존재이다'가 '우리는 영적 경험을 하는 인간이다'로 잘못 필사될 가능성은 얼마든지 있지 않을까?
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 139p] 고통으로부터의 자유는 문제로부터의 해방이 아니라 문제를 더 복잡하게 만들지 않는 마음에서 온다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 137p] 칼루 린포체는 말한다. "용서는 나에게 상처를 준 사람을 해방시켜 주는 일이 아니다. 그 사람을 향한 원망과 분노와 증오에서 나 자신이 해방되는 일이다."
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 137p] 화살에 맞으면 아픔을 느끼되 그 아픔을 과장하지 말라고 붓다는 충고했다. 병이 난 제자를 찾아가서도 아파하된 그 아픔에 깨어 있으라고 가르쳤다. 상처에 너무 상처 받지 말 것. 실망에 너무 실망하지 말 것. 아픔에 너무 아파하지 말 것 - 이것이 두 번째 화살을 피하는 방법이다. 잠시 아플 뿐이고, 잠시 화가 날 뿐이고, 잠시 슬플 뿐이면 되는 것이다. 그 순간이 지나면 우리는 다시 맑고 투명해진다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 131p] 삶은 이따금 우리 자신을 폐허로 만든다. 예기치 않은 불행이 영혼을 유린한다. 상처투성이인 마음밭에는 가시 돋힌 덤불만 무성하다. 살아 있는 한 그런 일들이 반복해서 일어난다. 중요한 것은 자기 치유를 위해 어떤 일을 하기로 마음먹는가이다. 그리고 그것이 어떻게 자신뿐 아니라 세상을 치료하는 일로 이어지는가 하는 것이다. 이것이 인간이 지닌 자기 회복력이다. 인간은 언제든 슬픔을 딛고 온전한 존재로 돌아갈 가능성을 지니고 있다. 성장하는 영혼이 세상을 성장시킨다. 내면에서 실한 도토리 열매를 꺼내 세상에 심는 것은 아름다운 숲을 예고한다. 그렇게 하지 않으면 우리 자신의 마음과 세상은 폐허인 채로 남아 있게 된다.<br>
+    삶의 지혜는 불행을 멈추게 하는 것이 아니라 불행 속에서도 건강한 씨앗을 심는 데 있다. 그것은 그만큼 생명의 원천을 신뢰하는 일이다. 역경은 씨앗의 껍질을 벗겨 내는 바람 같아서, 우리 존재의 중심부만 남긴다. 그러면 그 중심부가 놀라운 힘을 발휘한다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 129p] 아픔을 딛고 일어서기 위해서는 자신의 감정 중에서 건강하고 긍정적인 것만 선택해야하는 것과 같다. 부서지고 금 간 감정들은 조심스럽게 골라내야 한다. 그렇지 않으면 그것들이 인생의 자양분을 모두 빼앗아 가기 때문이다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 71p] 하버드대 심리학자 대니얼 길버트는 '행복에 영향을 미치는 것은 배경이나 환경이 아니라 일상의 순간에 대한 집중도'라고 말했다.
+    <br><br>
+
+    <a></a>
+    [새는 날아가면서 뒤돌아보지 않는다 46p] 마음이 담긴 길을 걸으려면 편견의 반대편에 설 수 있어야 한다. 모두에게 사랑받고 모든 사람이 당신의 여행을 이해하리라 기대하지 말아야 한다. 당신의 길이지 그 사람들의 길이 아니기 때문이다. 남의 답이 아니라 자신의 답을 찾는 것이 호모 비아토르이다.<br>
+    마음이 담긴 길을 걷는 사람은 행복을 추구하는 것이 아니라 행복과 나란히 걷는다. 행복은 목적지가 아니라 여정에서 발견되는 것이기 때문이다. 행복의 뒤를 좇는다는 것은 아직 마음이 담긴 길을 걷지 않고 있다는 것이다. 당신이 누구이든 어디에 있든 가고 싶은 길을 가라. 그것이 마음이 담긴 길이라면. 마음이 담긴 길을 갈 때 자아가 빛난다.
+    <br><br>
 
     <a></a>
     [새는 날아가면서 뒤돌아보지 않는다 46p] 마음이 담긴 길을 걸으려면 편견의 반대편에 설 수 있어야 한다. 모두에게 사랑받고 모든 사람이 당신의 여행을 이해하리라 기대하지 말아야 한다. 당신의 길이지 그 사람들의 길이 아니기 때문이다. 남의 답이 아니라 자신의 답을 찾는 것이 호모 비아토르이다.<br>
@@ -598,7 +793,7 @@
     <br><br>
 
     <a></a>
-    [스틸니스 105p] 이것이 열쇠다. 자기중심적이고 불아한 사람들은 자신의 결점을 숨기거나 곱씹거나 끙끙 앓거나 겉으로 드러내면서 그것을 정체성의 중심에 둔다. 이런 사람들은 고요할 수 없다. 고요는 오직 강인함 속에 뿌리를 내린다.<br>
+    [스틸니스 105p] 이것이 열쇠다. 자기중심적이고 불안한 사람들은 자신의 결점을 숨기거나 곱씹거나 끙끙 앓거나 겉으로 드러내면서 그것을 정체성의 중심에 둔다. 이런 사람들은 고요할 수 없다. 고요는 오직 강인함 속에 뿌리를 내린다.<br>
     바로 여기에 초점을 맞춰야 한다.<br>
     불안에 먹이를 주지 마라. 과대망상에 먹이를 주지 마라.<br>
     이 둘 모두 고요를 가로막는 방해물이다.<br>
@@ -612,7 +807,7 @@
 
     <a></a>
     [스틸니스 103p] 자신감 있는 사람은 중요한 게 무엇인지 잘 알고 있다. 타인의 의견을 무시해야 할 때를 안다. 앞서나가기 위해 허풍을 떨거나 거짓말하지 않는다. 당연히 자신의 허풍과 거짓말을 따락지 못해 허덕이는 일 또한 없다. 자신감이란 스스로를 증명해야 할 필요에서 벗어나 우리의 기준을 우리 스스로 정할 수 있게 만들어주는 자유다. 자신감 있는 사람은 타인과의 견해 차이를 두려워하지 않으며 열등감 때문에 올바른 의견을 그릇된 의견으로 바꾸지도 않는다.<br>
-    그에 반해 에고는 의심에 흔들리고 오만에 시달리며 자기 자랑과 가식을 숨기지 못한다. 그렇다고 자신의 내면을 들여다보거ㅓ나 속내를 있는 그대로 드러내지도 않는다. 그 속에 어떤 추한 것이 들어있는지 너무나 잘 알고 있기 때문이다. 자신감 있는 사람들은 늘 열린 마음으로 자기반성을 하기 때문에 아무것도 숨기지 않은 있는 그대로의 내면을 들여다볼 수 있다. 이처럼 불필요한 갈등과 불확실함, 분노를 제거하는 행동이 비로소 고요를 얻을 수 있는 여유를 만들어낸다.
+    그에 반해 에고는 의심에 흔들리고 오만에 시달리며 자기 자랑과 가식을 숨기지 못한다. 그렇다고 자신의 내면을 들여다보거나 속내를 있는 그대로 드러내지도 않는다. 그 속에 어떤 추한 것이 들어있는지 너무나 잘 알고 있기 때문이다. 자신감 있는 사람들은 늘 열린 마음으로 자기반성을 하기 때문에 아무것도 숨기지 않은 있는 그대로의 내면을 들여다볼 수 있다. 이처럼 불필요한 갈등과 불확실함, 분노를 제거하는 행동이 비로소 고요를 얻을 수 있는 여유를 만들어낸다.
     <br><br>
 
     <a></a>
@@ -1440,7 +1635,7 @@
     <br><br>
 
     <a></a>
-    [클루지 215p] 현대인의 삶은 진화심리학자들이 '과상 자극(hypoernormal stimulus)'라고 부르는 것들로 가득하다. 과상 자극이란 너무 '완벽'해서 보통 세계에는 없는 것을 말한다. 해부학적으로 불가능한 비율의 바비 인형, 에어브러시로 눈부시게 꾸며낸 모델의 얼굴, 자극적으로 빠르게 건너뛰는 MTV 화면들, 인공적으로 합성된 나이트클럽의 드럽소리 등등이 그러하다. 이런 자극들은 조상 전래의 세계에서는 감히 꿈도 못 꿀 극단적인 흥분과 희열을 전달한다.<br>
+    [클루지 215p] 현대인의 삶은 진화심리학자들이 '과상 자극(hypoernormal stimulus)'라고 부르는 것들로 가득하다. 과상 자극이란 너무 '완벽'해서 보통 세계에는 없는 것을 말한다. 해부학적으로 불가능한 비율의 바비 인형, 에어브러시로 눈부시게 꾸며낸 모델의 얼굴, 자극적으로 빠르게 건너뛰는 MTV 화면들, 인공적으로 합성된 나이트클럽의 드럼소리 등등이 그러하다. 이런 자극들은 조상 전래의 세계에서는 감히 꿈도 못 꿀 극단적인 흥분과 희열을 전달한다.<br>
     비디오 게임은 이 점에서 완벽한 예다. 우리가 이것을 즐기는 까닭은 이것이 우리에게 주는 통제감 때문이다. 우리는 게임이 부과하는 도전에 성공할 수 있는 만큼만 게임을 좋아한다. 그러다 이런 통제감을 잃는 순간 우리는 게임을 즐기기를 그만둔다. 공정해 보이지 않는 게임은 재미있어 보이지도 않는다. 왜냐하면 바로 이런 숙달의 느낌을 기대할 수 없기 때문이다. 도전은 바로 이런 희열을 강화하도록 설계되어 있다.<br>
     비디오 게임은 단순히 통제에 관한 어떤 것이 아니다. 이것은 통제의 정수다. 숙달과 연합된 희열을 최대한 빈번하게 제공하도록 설계된 게임은 기술 습득의 자연스러운 보상 과정에 대한 과상 변형이다. 비디오 게임이 일부 사람들에게 삶 자체 보다도 더 재미있게 느껴진다면, 그것은 바로 이런 게임이 우리의 쾌락 탐지 기제에 내재하는 부정확성을 이용해 먹도록 설계되어 있기 때문이다. 오, 불쌍한 유전자여!
     <br><br>
@@ -1720,7 +1915,7 @@
     [스틱! 114p] 스티커 메시지를 만드는 과정은 다음과 같다.<br>
     1) 당신이 소통해야 할 중심 메시지를 파악한다. 즉, 핵심을 찾아라.<br>
     2) 메시지의 반직관적 요소를 찾아낸다. 예를 들어, 당신의 핵심 메시지는 어떠한 의외성을 함축하고 있는가? 어째서 그런 점이 지금껏 드러나지 않았는가?<br>
-    3) 청중의 추측 기제를 충격적이고 반직관적인  방식으로 깨뜨림으로써 메시지를 전달한다. 그런 다음 그들이 새로운 추측 기제를 구축할 수 있도록 도와라.
+    3) 청중의 추측 기제를 충격적이고 반직관적인 방식으로 깨뜨림으로써 메시지를 전달한다. 그런 다음 그들이 새로운 추측 기제를 구축할 수 있도록 도와라.
     <br><br>
 
     <a></a>
@@ -1819,7 +2014,7 @@
 
     <a></a>
     [스틱! 37p] 어째서 우리는 탁월한 스티커 메시지들을 손쉽게 만들어내지 못하는 것일까? 어째서 우리의 인생은 머리에 착착 달라붙는 속담이 아니라 길고 지루한 메모들로 채워져 있는 걸까?
-    그것은 불행히도 우리의 머릿속에 악당이 존재하기 때문이다. 이 악당은 인간이라면 누구나  지니고 있을 자연스러운 심리적 경향으로, 6대 원칙을 활용해 탁월한 메시지를 만들어내는 능력을 혼란에 빠뜨린다. 그 악당의 이름은 바로 '지식의 저주'다.
+    그것은 불행히도 우리의 머릿속에 악당이 존재하기 때문이다. 이 악당은 인간이라면 누구나 지니고 있을 자연스러운 심리적 경향으로, 6대 원칙을 활용해 탁월한 메시지를 만들어내는 능력을 혼란에 빠뜨린다. 그 악당의 이름은 바로 '지식의 저주'다.
     <br><br>
 
     <a></a>
@@ -2500,7 +2695,7 @@
     <br><br>
 
     <a></a>
-    [정리하는 뇌 303p] 몰입 상태에서 주의가 제한된 지각 영역(perceptual field)에 집중되면, 당신은 그 부분에 모든 주의력을 투자한다. 행위와 의식이 하나로 합쳐진다. 자신의 행위와 지각을 별개라 생각하지 않게 되며, 당신의 생각이 곧 행동이 된다. 여기에는 심리학적 측면도 존재한다. 몰입 상태에서 당신은 실패에 대한 두려움으로부터의 자유를 경험한다. 당신이 무엇을 해야 하는지 인식하고 있지만 자기가 그것을 하고 있다는 느낌은 들지 않는다.  자아는 여기에 관여하지 않으며 완전히 사라져버린다.
+    [정리하는 뇌 303p] 몰입 상태에서 주의가 제한된 지각 영역(perceptual field)에 집중되면, 당신은 그 부분에 모든 주의력을 투자한다. 행위와 의식이 하나로 합쳐진다. 자신의 행위와 지각을 별개라 생각하지 않게 되며, 당신의 생각이 곧 행동이 된다. 여기에는 심리학적 측면도 존재한다. 몰입 상태에서 당신은 실패에 대한 두려움으로부터의 자유를 경험한다. 당신이 무엇을 해야 하는지 인식하고 있지만 자기가 그것을 하고 있다는 느낌은 들지 않는다. 자아는 여기에 관여하지 않으며 완전히 사라져버린다.
     <br><br>
 
     <a></a>
