--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -46,7 +46,7 @@
   <div id="contents">
     <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.58]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.64]</h1><br><br><br>
 
     <h3 style="text-align:center">Spells Mastered</h3><br>
 
@@ -60,6 +60,10 @@
        <button class="pulse3"><img src="Spell_Blink.png" width="100%" title="Blink is a level 4 mage spell that teleports the caster forward 20 yards (if possible) and frees the caster from stuns and roots. During the Burning Legion's third invasion of Azeroth, one large blink spell was used by the Council of Six to teleport Dalaran from above Karazhan to the Broken Isles. According to Emissary Auldbridge, the intensity of the spell can be disorienting and cause a loss of consciousness for a time. Some even wake up to find themselves stuck in walls."><b>Blink</b></button>
 
        <button class="pulse3"><img src="Spell_Conjure_Refreshment.png" width="100%" title="Conjure Refreshment is a level 5 mage spell that provides the caster with health- and mana-replenishing food. Casting it places into the mage's inventory a stack of 20 refreshments of an appropriate level."><b>Conjure<br>Refreshment</b></button>
+
+      <br>
+
+       <button class="pulse4"><img src="Spell_Arcane_Explosion.png" width="100%" title="Arcane Explosion is level 6 mage point blank area of effect spell that deals arcane damage to all enemies within 10 yards of the caster and generates an Arcane Charge for Arcane mages. It is used most often to quickly kill multiple weak enemies."><b>Arcane<br>Explosion</b></button>
     </div>
 
 
@@ -75,6 +79,58 @@
 
 
 
+
+
+
+    <a></a>
+    [아들러의 인간이해 28-29p] 인간의 영혼에 대한 지식이 축적되면 우리에게 저절로 새로운 의무감과 과제가 생긴다. 잘못된 행동 양식이 원인이 되어 삶에 잘 적응하지 못하는 사람의 습관을 깨뜨리고 그가 갖고 있던, 생을 관통하고 있는 그릇된 관점을 재조정할 수 있게 도와주어야 하는 것이다. 우리는 그에게 공동생활과 행복을 성취하는 데 적합한 새로운 관점을 제시해 주어야 한다. 그것은 겸손하게 말한다고 해도 새로운 사고방식으로서, 공동체의식이 보다 더 중요한 역할을 하는 삶의 양식을 새로 만드는 것이다. 우리가 원하는 것은 그의 정신적 발전의 이상형을 구축하려는 것이 아니다. 어쩔 줄 몰라 당황하는 사람에게는 새로운 관점 그 자체만으로도 엄청난 도움이 된다. 왜냐하면 이 새로운 관점으로부터 어느 방향에서 그가 오류에 빠져 들었는지 확실히 알 수 있기 때문이다. 우리의 이런 견해로 보자면 인간의 모든 활동을 원인과 결과의 연속으로 간주하는 엄격한 결정론자의 생각이 아주 잘못된 것은 아니다. 사람의 마음속에 아직 어떤 힘이 있고 어떤 동기가 살아 있을 때, 즉 자기 인식이 작동하고 있을 때 어떤 체험의 결과는 전혀 다른 것이 되며 인과관계는 새로운 가치를 획득하게 된다는 것이 확실하기 때문이다. 자기 안에서 무슨 일이 일어나고 있는지, 그것이 어떤 원인에서 비롯된 것인지 알게 될 때 자기 인식 능력은 훨씬 배가될 것이며, 그는 전혀 다른 사람이 되고 그 후로는 더 이상 절대로 자기 자신을 포기하지 않을 것이다.
+    <br><br>
+
+    <a></a>
+    [아들러의 인간이해 27-28p] 우리 교육 제도의 복잡한 혼란 속에서도 인간이해를 잘 습득할 수 있는 기회를 가진 사람은 사회적 관계를 잘 유지하고 주변 사람들이나 자신의 삶과 돈독한 관계를 맺고 있는 사람들이다. 이들은 낙관론자들이거나 투쟁하는 비관론자들이며, 적어도 자신의 비관주의 때문에 체념에 빠져들지 않는 사람들이다. 그러나 인간들과의 교류만으로는 부족하고 체험도 중요하다. 그렇게 해서 우리는 다음과 같은 결론에 이르게 된다. 즉 열악한 오늘날의 교육 현실에서 진정한 인간이해는 오직 한 가지 유형의 사람들에게만 가능하다. 그들은 참회하는 죄인으로서 혼란스러운 정신생활 속에서 많은 실수와 잦은 잘못 때문에 질곡에 빠져 들었다가 벗어난 사람들이거나 그와 아주 흡사한 경험을 한 사람들, 혹은 그와 비슷한 것을 느끼는 사람들이다. 특별히 이런 것들을 잘 수용할 수 있는 사람들 혹은 특별한 공감 능력을 가진 사람들도 물론 인간이해의 지식을 잘 습득할 수 있다. 가장 훌륭한 인간이해자는 아마도 모든 열정을 스스로 겪어 낸 사람일 것이다. 참회하는 죄인은 오늘날에도, 또 위대한 종교가 태동했던 시기에도 가장 귀중한 가치를 인정받은 사람이었을 것이다.<br>
+    그는 수천 명의 의인보다 더 높은 위치에 서 있다. 어떻게 그런 일이 가능할까? 그는 삶의 그 수많은 어려움을 딛고 일어선 사람, 일상의 늪에서 자신을 구해 내고 더 나은 길을 찾아가는 사람, 나쁜 길로 빠질 수 있는 유혹을 벗어던질 수 있고 자신을 고양시킬 힘을 찾아내는 사람, 삶의 좋은 면과 나쁜 면을 가장 잘 알고 있는 사람이다. 그 누구도 그와 비교될 수 없고, 아무리 정의로운 의인이라도 그에 미치지 못한다.
+    <br><br>
+
+    <a></a>
+    [아들러의 인간이해 25-26p] 인간이해의 경험과 실상에 정통하지 못한 사람이 어떤 사람을 보다 나은 인간으로 교육시키려고 시도한다면 매우 혼란스러운 사태에 직면할 것이다. 그는 오로지 지금까지와 마찬가지로 피상적인 차원에 머무를 뿐이고, 어떤 사실의 외적 양상이 변했고 다른 뉘앙스가 생겼으니, 자신이 무언가를 변화시켰다는 잘못된 믿음을 가질 수도 있다. 실제 임상 경험에 비춰 보면, 그런 작업이 한 개인을 조금도 변화시키지 못하고 행동 양식 자체가 수정되지 않는 한 겉으로 보이는 변화 또한 순식간에 지나가 버린다는 점을 알게 된다. 한 사람을 변화시킨다는 것은 간단한 과정이 아니다. 그것은 신중함과 인내심을 요구한다. 그리고 무엇보다 개인적 허영심을 버려야 한다. 우리가 변화시켜야 할 어떤 개인이 다른 사람의 허영심을 위한 대상이 되어 줄 이유는 없기 때문이다. 변화 과정은 변화되어야 할 대상이 스스로를 수긍할 수 있는 그런 방법으로 진행되어야만 한다. 그것은 아무리 맛있는 음식이라도 기분에 거슬리게 제공된다면 거부될 수밖에 없다는 사실처럼 자명한 일이다.
+    <br><br>
+
+    <a></a>
+    [아들러의 인간이해 24-25p] 그들은 이렇게 해서 항상 조심스러운 합리화를 하면서 자기비판으로부터 도망치려 한다. 자기는 결코 잘못한 적이 없다고 믿으며 자신들이 이루지 못한 모든 일의 책임을 다른 사람에게 전가한다. 그런 사람들이 간과하는 한 가지 사실은 스스로 실수를 하지 않기 위한 아무런 노력도 하지 않는다는 것이다. 그들은 열정에 가까운 노력으로 자신의 잘못을 고수한다. 물론 그들이 그렇게 주장하는 한 잘못된 교육에 죄가 있을 수도 있다. 한 가지 경험으로부터 여러 가지 다양한 해석이 가능하다는 것, 다른 결론을 도출해 낼 수 있다는 사실은 왜 사람들이 자기들의 행동 양식을 바꾸려 하지 않고 자기 자신에게 꼭 들어맞을 때까지 자기 경험을 바꾸고 뒤틀고 왜곡하는지 이해할 수 있게 해준다. 인간에게 가장 힘든 일은 자신을 정확하게 인식하고 자신을 변화시키는 일인지도 모른다.
+    <br><br>
+
+    <a></a>
+    [아들러의 인간이해 23-24p] 우리는 이미 한 개인의 생활방식은 결코 변하지 않는다는 주장을 한 바 있다. 많은 사람이 이 주장을 이해하기 힘들어 할지도 모른다. 왜냐하면 사람들은 삶에 대한 그의 태도에 변화를 주는 숱한 경험을 하기 때문이다. 어떤 한 가지 경험이라고 할지라도 수많은 다양한 해석을 낳을 수 있다는 사실을 생각해야 한다. 동일한 경험을 한 두 사람이 곧 동일한 결론과 적용에 다다르는 것은 아니다. 우리가 어떤 경험을 통해 항상 더 현명해지는 것은 아니라는 사실이다. 어떤 사람이 위험을 피하는 방법을 알게 되고 그에 대한 자기 나름의 태도나 입장을 갖게 되었다고 해도 그 사람의 생활 방식이 그 결과로 인해 변하는 것은 아니다. 앞으로 더 많은 논의를 통해 알게 되겠지만 인간은 항상 수많은 자신의 경험으로부터 동일한 목적의 적용 방법을 이끌어 낸다. 더 자세한 연구를 통해 확인한 바는 그의 모든 경험은 자신의 기존 행동 양식에 맞춰지고 그의 생활 모형을 강화시킬 뿐이라는 것이다.
+    <br><br>
+
+    <a></a>
+    [아들러의 인간이해 23p] 적어도 처음에는 전체적인 완성품을 보기까지 어떤 결론을 이끌어 내기 전에 조심스럽고 끈기 있게 기다리는 편이 낫다. 그리고 그런 일은 누군가에게 그것으로 확실히 도움을 줄 수 있으리라는 확신이 있을 때에만 그렇게 해야 한다. 올바른 판단이라고 하더라도 잘못된 방식으로 적절하지 못한 순간에 제시하면 엄청난 피해를 가져올 수 있기 때문이다.
+    <br><br>
+
+    <a></a>
+    [아들러의 인간이해 21-22p] 진심으로 인간을 이해하고 싶어 하는 사람들은 자기 자신의 감정이입을 통해 인간의 가치와 중요성을 경험한 사람들뿐이다. 다시 말해 스스로의 정신적 위기를 통해서거나 다른 사람들의 마음속에 있는 그 위기를 충분히 인식한 사람들만이 그렇게 할 수 있다.
+    <br><br>
+
+    <a></a>
+    [아들러의 인간이해 19-20p] 우리가 어떤 환자의 유년 시절에 대한 생생한 기억들을 듣고 그 기억들을 어떻게 해석해야 할지 정확히 이해하게 되면, 그가 어떤 사람인지 파악할 수 있다. 이러한 과정에서 우리는 한 인간이 자신의 어린 시절을 구성했던 삶의 방식으로부터 결코 빠져나올 수 없다는 사실도 알게 되었다. 아주 적은 수의 사람들만이 유년 시절의 삶의 패턴에서 벗어날 수 있었다. 하지만 성인의 삶은 완전히 다른 상황에 놓이기 때문에 새로운 모습으로 나타나며 새로운 인상을 주게 된다. 그렇지만 그 사실이 성인이 된 후 삶의 양식이 바뀌었다는 것을 의미하는 것은 아니다. 정신생활은 그 근본에 있어서는 변하지 않는다. 개인들은 유년 시절에나 성인이 된 후에나 똑같은 생활 궤적을 따라가며 똑같은 목표를 추구하고 있는 것이다. 우리의 초점을 유년 시절의 경험에 집중시킬 수밖에 없는 이유는 우리가 환자의 행동 양식을 현재 상태에서부터 바꾸려 해도 그것을 시작할 수 없다는 것을 알게 되었기 때문이다. 우리는 환자의 셀 수 없이 많은 체험이나 인상을 제거하려고 해도 성공하지 못했다. 그러하기 전에 우리는 그 사람의 근본적인 행동 패턴을 먼저 찾아내야 하며, 그것을 이해할 수 있게 되면 그의 근본적 성격이나 눈에 띄는 질환 증상에 대해서 정확한 해석을 내릴 수 있게 될 것이다.
+    <br><br>
+
+    <a></a>
+    [아들러의 인간이해 19p] 우리는 환자의 유년 시절에 대한 구체적인 지식 없이도 그의 유년 시절에 대해 많은 것을 추론할 수 있었다. 환자가 어린 시절에 경험했던 것들의 직접적인 자국과 흔적들이 어른이 된 뒤에도 여전히 보이기 때문이다.
+    <br><br>
+
+    <a></a>
+    [아들러의 인간이해 18-19p] 정신생활의 개별 현상들은 그 자체로서 충분히 완벽한 전체로 간주해서는 안 된다. 서로 따로 떼어놓을 수 없는, 전체 속의 부분들로 이해할 때 그에 대한 완전한 이해에 도달할 수 있다. 그리고 한 인간을 이끌어 가는 활동 궤도, 삶의 방식, 자세 등을 발견했으며, 유년기 삶의 방식의 목표가 성숙한 후의 목표와 정확하게 일치한다는 사실을 확인할 수 있었다. 간단히 말해, 심리적 움직임이라는 관점에서 볼 때 삶의 방식에 어떤 변화도 일어나지 않았다는 것이 놀라우리만치 확실했다. 외부적인 형태나 구체적인 방식, 어떤 심리 현상의 언어적 표현은 조금 변했을지 몰나 최종 목표로 향햐는, 정신생활을 결정하는 근본 토대나 목표, 리듬, 역동성, 그 밖의 모든 것은 불변인 채로 그대로라는 것이다.
+    <br><br>
+
+    <a></a>
+    [아주 작은 습관의 힘 65-66p] 정체성 변화는 습관 변화의 길잡이다. 이 책은 당신 자신, 가족, 집단, 회사(당신이 바라는 어느 곳이든)에서 더 나은 습관을 세우는 방법을 단계별로 설명하고 상기시킬 것이다. 하지만 진짜 질문은 이것이다.<br>
+    "당신은 자신이 되고 싶은 사람이 되어가고 있는가?"<br>
+    변화를 위한 첫 번째 걸음은 '무엇을' 또는 '어떻게'가 아니라 '누구'다. 우리는 자신이 어떤 사람이 되고 싶은지 알아야 한다. 그렇지 않다면 변화에 대한 탐색은 노 없이 보트를 타고 있는 것이나 마찬가지다.<br>
+    우리는 자신에 대한 믿음을 변화시킬 힘을 가지고 있다. 정체성은 단단한 포석 위에 세워진 것이 아니다. 매 순간 바꾸고 선택할 수 있다. 오늘 선택한 습관으로 지금 내가 원하는 정체성을 강화할 수 있다. 이것이 이 책의 더 깊은 목적, 습관이 중요한 진짜 이유를 우리에게 알려준다.<br>
+    더 나은 습관을 세우는 것은 생활의 편의를 위한 수단들로 우리의 하루를 난삽하게 만드는 것이 아니다. 매일 밤 칫솔질을 하거나, 매일 아침 찬물 샤워를 하거나, 매일 똑같은 옷을 입는 것이 아니다. 돈을 더 많이 벌거나, 살을 빼거나, 스트레스를 줄이는 일에 관한 것도 아니다. 습관은 우리가 이 모든 것을 얻어낼 수 있도록 도와주지만, 근본적으로 뭔가를 얻어내는 일이 아니다. 습관은 어떤 사람이 '되는' 일이다.<br>
+    궁극적으로 습관은 내가 되고 싶어 하는 사람이 될 수 있도록 돕는다는 점에서 중요하다. 습관은 자신에 대한 가장 깊은 믿음을 계발하는 최고의 수단이다. 말 그대로, 나 자신이 습관이 되는 것이다.
+    <br><br>
 
     <a></a>
     [아주 작은 습관의 힘 64-65p] 습관이 우리의 정체성을 형성하고, 우리의 정체성은 습관을 형성한다. 이는 쌍방향으로 작용한다. 모든 습관 형성은 이런 순환 고리를 가지고 있다.<br>
