--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.119]</h1><br><br><br>
+    <h1>Karazhan Library[Lv.120]</h1><br><br><br>
 
     <h3 style="text-align:center">Classes Acquired</h3><br>
 
@@ -146,7 +146,8 @@
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
-    <h2><strong>심리학[Lv.11]</h2></strong>
+    <h2><strong>심리학[Lv.12]</h2></strong>
+      [아들러의 인간이해]-알프레드 아들러<br>
       [습관과 중독]-이현수<br>
       [프레임]-최인철<br>
       [오래된 연장통]-전중환<br>
@@ -229,6 +230,7 @@
 
     <p><pre>
       <h2>2021년 6월 독서</h2>
+        <li>심리학:[아들러의 인간이해]-알프레드 아들러</li>
         <li>자기계발:[아주 작은 습관의 힘]-제임스 클리어</li>
         <li>에세이:[네 가지 약속]-돈 미겔 루이스</li>
         <li>에세이:[헤르만 헤세의 나무들]-헤르만 헤세</li>
