--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.120]</h1><br><br><br>
+    <h1>Karazhan Library[Lv.127]</h1><br><br><br>
 
     <h3 style="text-align:center">Classes Acquired</h3><br>
 
@@ -85,7 +85,10 @@
 
 
     <p style="margin-top:45px;"><pre>
-    <h2><strong>경제[Lv.44]</h2></strong>
+    <h2><strong>경제[Lv.48]</h2></strong>
+      [차트의기술]-김정환<br>
+      [일목균형표]-일목산인<br>
+      [부의 미래 누가 주도할 것인가]-인호,오준<br>
       [데이터 읽기의 기술]-차현나<br>
       [플랫폼 레볼루션]-마셜 밴 앨스타인<br>
       [어떻게 광고해야 팔리나요]-김종섭<br>
@@ -179,7 +182,9 @@
       [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
-    <h2><strong>사회[Lv.8]</h2></strong>
+    <h2><strong>사회[Lv.10]</h2></strong>
+      [바른마음]-조너선 하이트<br>
+      [메타버스]-김상균<br>
       [지적 대화를 위한 넓고 얕은 지식 0]-채사장<br>
       [플랫폼 레볼루션]-마셜 밴 앨스타인<br>
       [디지털 트렌드 2021]-권병일<br>
@@ -191,7 +196,9 @@
     <h2><strong>과학[Lv.2]</h2></strong>
       2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
       2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
-    <h2><strong>자기계발[Lv.12]</h2></strong>
+    <h2><strong>자기계발[Lv.14]</h2></strong>
+      [절제의 성공학]-미즈노 남보쿠<br>
+      [손정의처럼 일하라]-미키 다케노부<br>
       [아주 작은 습관의 힘]-제임스 클리어<br>
       [THE CODE OF THE EXTRAORDINARY MIND]-VISHEN LAKHIANI<br>
       [시크릿]-론다 번<br>
@@ -227,6 +234,25 @@
 
 
 
+    <p><pre>
+      <h2>2021년 9월 독서</h2>
+        <li>자기계발:[절제의 성공학]-미즈노 남보쿠</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2021년 8월 독서</h2>
+        <li>사회:[바른마음]-조너선 하이트</li>
+        <li>경제:[차트의기술]-김정환</li>
+        <li>경제:[일목균형표]-일목산인</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2021년 7월 독서</h2>
+        <li>경제:[디커플링]-탈레스 S. 테이셰이라</li>
+        <li>자기계발:[손정의처럼 일하라]-미키 다케노부</li>
+        <li>경제:[부의 미래 누가 주도할 것인가]-인호,오준호</li>
+        <li>사회:[메타버스]-김상균</li>
+    </p></pre>
 
     <p><pre>
       <h2>2021년 6월 독서</h2>
