--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -61,7 +61,7 @@
 
        <button class="pulse3"><img src="Spell_Conjure_Refreshment.png" width="100%" title="Conjure Refreshment is a level 5 mage spell that provides the caster with health- and mana-replenishing food. Casting it places into the mage's inventory a stack of 20 refreshments of an appropriate level."><b>Conjure<br>Refreshment</b></button>
 
-      <br>
+       <br>
 
        <button class="pulse4"><img src="Spell_Arcane_Explosion.png" width="100%" title="Arcane Explosion is level 6 mage point blank area of effect spell that deals arcane damage to all enemies within 10 yards of the caster and generates an Arcane Charge for Arcane mages. It is used most often to quickly kill multiple weak enemies."><b>Arcane<br>Explosion</b></button>
     </div>
@@ -79,9 +79,191 @@
 
 
 
+    <a></a>
+    [리얼리티 트랜서핑1 71-72p] 당신과 세상 사시에 철의 장막을 쳐놓는다면 좋지 않은 펜듈럼들로부터 보호받을 수 있으리라고 생각할 수도 있다. 그러나 그것은 환상일 뿐이다. 그런 철갑의 보호막 속에 있게 되면 당신은 이렇게 혼잣말을 할 것이다. "난 꽉 막힌 벽이야. 아무것도 보이지도 않고 들리지도 않아. 난 아무것도 모르고, 그 누구와도 대화하지 않아. 나에게 다가올 길은 없어." 그런 보호의 장을 유지하기 위해서는 에너지를 소비해야 하는데, 그것도 조금이 아니라 실로 많은 에너지가 필요하다. 의도적으로 세상으로부터 자신을 단절시키려고 애쓰는 사람은 끊임없는 긴장 속에서 살아간다. 게다가 무엇보바도, 보호의 장의 에너지는 애초에 그로부터 자신을 보호하려고 했던 그 펜듈럼의 주파수에 동조되어 있다. 그리고 바로 그것이 펜듈럼이 노리는 바다. 펜듈럼은 당신이 에너지를 기쁜 마음에서 주든 분노하는 마음에서 주든 전혀 상관하지 않는다. 펜듈럼은 그저 에너지를 얻는 데에만 관심 있을 뿐이다. 그렇다면 무엇이 우리를 펜듈럼으로부터 보호해줄 수 있을까? 그것은 비어 있음이다. 내가 텅 비어 있다면 무엇으로도 나를 붙잡지 못할 것이다. 나는 펜듈럼의 게임에 말려들지 않는다. 펜듈럼으로부터 자신을 보호하려고 애쓰지도 않는다. 나는 단순히 그것을 무시한다. 펜듈럼의 에너지는 나를 그냥 통과해 가버린다. 나를 건들지도 못하고 그냥 공간 속으로 사라져 버린다. 펜듈럼의 게임이 나를 괴롭히지 못한다. 아무런 영향도 주지 못한다. 펜듈럼에게 나는 텅 비어 있는 존재다.
+    <br><br>
 
+    <a></a>
+    [리얼리티 트랜서핑1 70-71p] 당신이 무엇을 좋아하든 싫어하든, 그것은 아무런 의미가 없다. 중요한 것은, 생각이 그런 감정의 대상에 매여 있으면 사념 에너지가 특정 주파수에 고정되고, 그러면 당신은 펜듈럼에 붙잡혀서 당신이 좋아하거나 싫어하는 대상이 널려 있는 해당 인생트랙으로 옮겨가게 된다는 사실이다.<br>
+    삶에서 어떤 것을 원하지 않는다면, 거기에 대해 생각하기를 멈추고 그것을 담담하게 지나쳐가라. 그러면 그것은 당신의 삶에서 사라질 것이다. 삶 밖으로 어떤 것을 내던진다는 것은 그것을 회피하라는 것이 아니라 그냥 무시하라는 뜻이다. 회피하는 것은 어떤 것을 자기 삶 속으로 들어오도록 허용하면서, 동시에 거기서 벗어나려고 안간힘을 쓰는 것이다. 무시한다는 것은 어떤 식으로도 거기에 반응하지 않으며, 따라서 그것을 삶 속에 가지고 있지 않는 것을 뜻한다.
+    <br><br>
 
+    <a></a>
+    [리얼리티 트랜서핑1 69-70p] 선택하기가 무엇을 의미하는지를 알려면 거부하기를 먼저 배워야 한다. 사람들은 대개 자기가 원하는 것이 무엇인지는 잘 몰라도 무엇을 원하지 않는지는 분명히 알고 있다. 많은 사람들이, 원치 않는 일로부터 벗어나려고 애쓰다가 그와 정반대의 결과를 일으키고 있다. 거부하기 위해서는 받아들임이 필요하다. 여기서 '받아들임'이라는 말은 무엇을 껴안아 자신의 일부로 만들라는 의미가 아니다. 여기에서 말하는 받아들임이란, 만물이 그 자체로서 존재할 권리를 지니고 있음을 인정해주고 그것을 담담하게 지나쳐 가라는 뜻이다. 받아들이고 놓아 보내는 것, 그것은 모든 것이 당신을 통과하여 지나가도록 허용하고, 그것이 떠나갈 때 미련 없이 보내주는 것이다. 그와 반대는 받아들여서 곁에 붙들어두는 것, 그리고 거기서 집착하거나 저항하는 것이다.
+    <br><br>
 
+    <a></a>
+    [리얼리티 트랜서핑1 69p] 당신은 이 세상 어떤 것도 비난하거나 바꿔놓을 권리가 없다. 미술관에 전시된 작품을 볼 때처럼, 좋든 싫든 모든 것을 있는 그대로 받아들여야 한다. 미술관에서는 마음에 들지 않는 작품이 많아도 그것이 보기 싫으니 치워버리라고 요구할 생각은 떠오르지도 않을 것이다. 펜듈럼이 존재할 권리가 있음을 인정하면 당신에게는 펜듈럼을 저 혼자 내버려둘 권리, 곧 그것의 영향력에서 벗어날 권리가 있음을 깨닫게 된다. 하지만 가장 중요한 것은 펜듈럼과의 싸움에 빨려들지 않는 것이다. 펜듈럼을 비난하지도 말고 화내지도 말고 침착성을 잃지도 말라. 그 모두가 펜듈럼의 게임에 말려드는 것이기 때문이다. 그와 정반대로 하라. 펜듈럼을 이미 주어진 것, 피할 수 없는 악으로 묵묵히 받아들이고 거기서 떠나라. 어떤 형태로든 싫은 마음을 보인다면 펜듈럼에게 에너지를 뺏기게 될 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 68p] 뭔가를 피하려는 욕구가 강하면 강할수록 그것을 갖게 될 위험은 더욱 커진다는 것이 분명해진다. 원하지 않는 것에 맞서서 싸우는 것은 사실은 바로 그것을 인생의 한 부분으로 만들려고 갖은 애를 쓰는 것이나 마찬가지다. 달갑지 않은 인생트랙으로 옮겨가고 싶다면 그토록 별나게 애쓸 필요조차 없다. 부정적인 생각을 하면서 거기다 감정을 실어주는 것만으로 충분하다. 예컨대 궂은 날씨를 싫어해서 비가 지긋지긋하다는 생각만 게속 한다. 이웃이 시끄럽게 굴어서 당신은 늘 그들과 싸우거나, 마음속으로 그들을 경멸한다. 당신은 뭔가를 두려워하고, 그것이 당신을 불안에 빠뜨린다. 직장 일이 지긋지긋해서 일에 대한 혐오의 감정 속으로 빠져드다.<br>
+    두려워하거나 혐오하거나 경멸하는 것과 같은, 당신이 정말 꺼리는 것들은 당신을 어디에나 따라다닐 것이다. 물론 피하고 싶은 다른 것들도 많지만 그것이 지금 당장 당신을 크게 괴롭히지는 않는다. 이런 경우, 그 일들은 당신의 인생에 끼어들지 않을 것이다. 실제로 일어나지 않는 것이다. 그러나 꺼리는 그것이 당신에게 영향을 미치도록 허용하여, 혐오감을 느끼고 부정적인 감정을 품자마자 그 원치 않는 일은 틀림없이 당신의 삶 속에 현실화될 것이다.<br>
+    삶에서 원치 않는 일을 제거하는 유일한 방법은, 당신의 사념 에너지를 사로잡고 있는 펜듈럼의 영향에서 벗어나는 것이다. 이제부터는 펜듈럼이 집적거리도록 놔두지도 말고 그 게임에 빠지지도 말라. 파괴적인 펜듈럼의 손아귀를 빠져나오는 방법은 두 가지가 있다. 펜듈럼을 그냥 지나가게 하거나 멈추게 만드는 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 64p] 펜듈럼은 사람의 약한 곳을 건드려서 그의 에너지를 마구 뽑아낸다.<br>
+    펜듈럼이 꼭두각시 인형을 조정하는 데 사용하는 이 같은 줄들을 얼마든지 열거할 수 있다. 정의감, 자부심, 허영심, 명예, 사랑, 증오, 욕망, 관용, 호기심, 관심, 갈망, 그 밖의 다른 감정과 욕구들... 감정과 관심이 생각의 흐름을 한 방향으로 고정되게 한다. 어떤 주제가 흥미나 감정을 유발시키지 않는다면 거기에는 집중하기가 무척 어렵다. 그래서 펜듈럼들은 그 사람의 특정한 감정이나 욕구 등의 정확한 약점을 찔러서 생각의 흐름을 사로잡는 능력을 가지고 있다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 62p] 펜듈럼이 당신의 에너지에 접근하려고 할 때 가장 선호하는 방법 중 하나는 당신의 균형을 깨뜨리는 것이다. 균형이 무너지면 당신은 그 펜듈럼의 주파수로 '흔들리기' 시작한다. 그로써 당신은 또 그 펜듈럼 자체를 흔들어주게 된다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 61p] 사실 펜듈럼은 당신이 그것을 어느 쪽으로 밀어서 흔들든, 그 방향에는 눈곱만큼도 관심이 없다. 사념 에너지가 펜듈럼의 주파수와 공명하는 한, 긍정적인 에너지와 부정적인 에너지가 똑같이 작용한다.<br>
+    그래서 펜듈럼의 가장 주요한 과제는 무슨 수를 쓰든지 사람들의 아픈 곳을 찌르는 것이다. 사람들의 마음을 펜듈럼에 사로잡아놓을 수만 있으면 어떤 방법을 쓰는지는 중요하지 않다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 55p] 파괴적인 펜듈럼의 특성은, 사람들을 자기편으로 끌어들이기 위해 다른 펜듈럼들을 공격하여 파괴하려고 한다는 것이다. 이를 위해 펜듈럼은 언제나 자신의 지지자들을 다른 펜듈럼의 지지자들과 대립시키려고 애쓴다. "우리는 착하지만 저들은 우리와 달라! 저들은 나빠!" 이 싸움에 말려든 사람들은 길을 잃고 그릇된 목표를 따르기 시작한다. 사람들은 그 허위의 목표를 자신의 목표인 양 믿는 실수를 저지른다. 이렇게 하여 펜듈럼의 파괴적 성질이 본색을 드러낸다. 다른 지지자들과 싸우는 것은 부질없는 것이며, 당신과 상대편 양쪽의 삶을 모두 망치는 짓이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 54p] 파괴적인 펜듈럼은 사람들에게 운명을 선택하지 못하도록 가르쳐왔다. 선택을 정말 자기 마음대로 할 수만 있다면 그는 독립적인 존재가 될 것이다. 그렇게 되면 그는 펜듈럼 따위에 매혹되지 않을 것이므로 펜듈럼의 지지자가 되지 않는다. 우리의 마음은 운명이 이미 정해져 있다는 생각에 너무 익숙해져 있어서, 운명을 원하는 대로 선택할 수 있다는 사실을 믿기가 매우 어렵다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 50p] 모든 펜듈럼은 그 지지자들로부터 에너지를 얻어서는 그 위에 군림하므로, 그 본질이 파괴적이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 49p] 어떤 집단의 생각이 한 방향으로 초점 맞추어지고, 그 결과로 각자의 사념 에너지의 매개변수가 동일해질 때 하나의 구조체가 생겨난다. 개개인의 사념 에너지는 합쳐져서 하나의 흐름을 이룬다. 그리하여 이 에너지의 바다 한 가운데에서 정보에 기반을 둔 하나의 독자적 에너지체인 에너지 펜듈럼이 만들어지는 것이다. 이 구조체는 독자적인 생애를 시작하고, 그 창조에 참여한 사람들을 자신의 법칙에 복종시킨다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 44p] 자신의 행복은 스스로 선택하는 것이어서, 그것을 얻어내려고 싸울 필요가 없다. (중략) 당신이 무엇을 주문하든지 그것은 언제나, 무조건 배달된다. 그러나 선택한다는 것은 무엇을 바라는 것과는 다르다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 40p] 심지어 지식의 다양한 영역에서조차도, 세상은 우리가 보기 원하는 바로 그 모습으로 우리 앞에 나타난다. 예를 들어 관념론이 세상을 환상이라고 주장하면, 세상은 거기에 맞춰준다. 물질주의가 그 반대를 주장하면, 세상은 또 거기에 아무런 반대도 내세우지 않는다. 사람들은 자신의 견해를 상대방에게 강요하며 서로 논쟁한다. 그러면 세상은 또 그들의 견해가 모두 옳다는 것을 보여준다. 멋지지 않은가! 가능태 공간은 사람들이 하는 말로, 하나의 환상이다. 그것이 물질적으로 실현된 것이 바로 '물질세계'이고 말이다. 우리는 언제나 자기가 선택한 것을 얻는다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 39p] 모든 생각이 다 실현될 수는 없으며, 모든 소망이 다 성취되지는 않는다. 그리고 그것은 생각의 내용 때문이 아니라, 생각의 성질 때문이다. 단순히 꿈꾸거나 바라는 것은 '선택하기'가 아니다. 꿈은 실현되지 않는다. 꿈이 실현되려면 일정한 조건이 충족되어야만 한다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 38-39p] 장애물과 싸우기를 선택하면, 싸워야 할 장애물을 넘치도록 만나게 될 것이다. 당신이 문제를 가지고 고민에 빠져 있다면, 당신의 삶에는 언제나 문제가 끊이지 않을 것이다. 당신은 현재의 인생트랙 위의 상황을 바꿔놓으려고 여러 가지로 행동을 취해보지만, 가능태 공간 속 시나리오의 내용을 고칠 수는 결코 없다. 오직 다른 시나리오를 선택할 수 있을 뿐이다. 가능태 공간 속 시나리오의 불쾌한 사건을 고치려고 애쓸 때, 당신은 정확히 자기가 싫어하는 것들을 생각하게 된다. 바로 이를 통해서 당신의 선택은 유감없이 물질화되어서, 원하지 않았던 바로 그것을 얻게 되는 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 37-38p] 인생의 상황들은 특정 행동에 의해서만 형성되는 것이 아니라, 그 사람의 생각의 성질에 의해서 형성되기도 한다. 당신이 세상에 대해 적대적인 태도를 취하면 세상도 당신을 같은 식으로 대접할 것이다. 당신이 늘 투덜대며 세상에 대한 불만을 늘어놓는다면 만족하지 못할 이유는 갈수록 늘어날 것이다. 세상에 대한 당신의 태도가 부정 일색이라면, 세상은 살기 힘든 곳이 될 것이다. 그 반대의 경우도 물론 그렇다. 긍정적인 태도는 당신의 삶을 더 나은 삶으로 바꿔주는 가장 자연스러운 방법이다. 당신은 자기가 골라잡은 것을 가진다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 37p] 인간의 사념 에너지는 전적으로 물질적인 것이라는 사실을 인식하기만 하면 충분하다. 사념 에너지는 머릿속에 갇힌 채 목적 없이 그 안을 맴돌고 있는 것이 아니다. 사념 에너지는 공간으로 퍼져 나와 주변의 에너지장과 상호작용한다. 오늘날 이 사실에 반론을 펴는 사람은 거의 없을 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 35p] 생각은 행동과 마찬가지로 사람의 운명에 동일한 영향력을 미친다. 사람들은 행동이 가시적인 결과를 끌어온다는 손쉬운 설명에 익숙해 있다. 생각의 영향은 보통 눈에 띄지 않으므로 설명할 수도, 예측할 수도 없다. 생각과 그에 따른 사건들 사이의 일목요연한 인과관계를 보여준다는 것은 상태적으로 어려운 일로 보일 수 있다. 그러나 당신은 곧 한 사람의 생각이 그의 현실에 직접적인 영향을 미친다는 사실을 깨닫게 될 것이다. 사람은 정확히 자신이 선택한 것을 얻는다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 34p] 어떤 식으로든 의식은 사람의 운명을 형성시킨다. 다음의 진술을 우리의 출발점으로 삼아보자. 사념 에너지의 파동은 잠재된 가능태를 물질화시킨다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 30p] 가능태의 수가 무한하다는 바로 이 이유로 인해서 현실은 그 모든 다양성을 펼쳐낸다. 모든 출발점으로부터 인과의 사슬이 흘러나온다. 출발점을 선택하면 그에 따른 현실이 펼쳐져 나온다. 선택된 출발점에 따라서 다른 인생트랙을 따라 현실이 전개된다고 할 수 있는 것이다. 모든 사람은 자기가 선택한 것을 얻는다. 무한한 가능태가 이미 존재하므로, 당신은 당연히 선택권을 가지고 있다. 당신이 마음에 드는 운명을 골라잡는 것을 막을 사람은 아무도 없다. 운명을 지배한다는 것은 결국 단 하나의 단순한 일, 곧 골라잡기로 귀착된다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 29p] 존재 가능한 모든 물체와 그 동선상의 무한수의 지점에 관한 데이터는 정보의 장 속에 저장된다. 이 정보의 장을 우리는 가능태 공간이라고 부를 것이다. 가능태 공간은 과거에 존재했던 모든 것과, 현재에 존재하는 모든 것, 그리고 미래에 존재할 모든 것에 대한 정보를 담고 있다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 27p] 우주의 본질은 하나이며 나누어져 있지 않지만, 그것은 끊임없이 다양한 모습으로 우리 앞에 나타난다. 사람들이 그 한 측면을 제대로 연구하고 해명하기도 전에 이전 것과는 완전히 모순되는 다른 측면이 나타난다. 과학자들은 모순을 해소하기 위해 현실의 다양한 측면들을 통합시켜보려고 애쓰지만 그것은 지극히 어려운 일이다. 과학지식의 모든 분야를 아우르고 조화시켜줄 수 있는, 의심의 여지가 없는 한 가지 사실이 있다. - 우리의 현실이 취할 수 있는 모습의 엄청난 다양성 말이다. 이 비길 데 없이 무한한 가능태야말로 우리 우주의 가장 중요하고도 근본적인 본성이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 6p] 부자가 되고 행복해지는 법을 가르치는 책은 많이 있다. 물론 그 모두가 우리를 무척이나 유혹한다. 부자가 되고 행복해지기를 원하지 않는 사람이 어디 있을까? 그렇지만 그런 책들을 열어보면 부단한 노력을 요구하는 명상법이나 훈련법들이 등장한다. 그것은 우리를 정말 좌절하게 만든다. 삶 자체가 실로 하나의 힘에 겨운 시련인데도, 그들은 더 열심히 노력해서 당신 안에 남아 있는 것을 마지막 한 방울까지 모두 짜내라고 한다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 6p] 드러나지 않은 현실이 그 어떤 마법보다도 훨씬 더 놀랍다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 255p] 개인적 위험은 계량화가 불가능하다. 그것은 가치와 우선순위, 자신이 누구인지를 표현하는 문제다. '안전 제일주의'라는 말은 현상에 만족하겠다는 것을 의미한다. 지금 당장 금전적 이익이 있으면 시간 낭비와 만족감의 부재 또한 감수할 수 있다는 뜻이다. 아니면 아무 생각조차 해보지 않겠다는 뜻이다. 반면, 시간과 만족이 값을 매길 수 없을만큼 소중한 것이라 여긴다면 자신과 가족의 행복을 위험에 빠뜨리지 않는 한도 내에서 실패에 따른 위험부담을 감수하게 된다. 원하는 삶을 살기 위한 위험부담은 아무것도 아니라는 것을 알기 때문이다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 253p] 개인의 위험부담은 존경하지 않는 사람과 함께 일하는 것, 나와 다른 사업관을 가진 회사에서 일하는 것, 그리고 중요하다고 생각하는 것을 타협해야 하는 것, 본모습을 제대로 발휘할 수 없는, 혹은 완전히 모순되는 일을 하는 것들을 의미한다. 하지만 그중 가장 큰 위험부담은 미래의 행복을 위안으로 삼으면서 하고 싶지도 않은 일에 평생 인생을 낭비하게 되는 것이다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 252p] 만약 몸담고 있는 분야에 실력이 있고 하늘이 돕는다면 승리할 것이다. 물론 처음에는 시간이 부족할 수 있지만 매일 실력을 발휘한다면 카지노를 이길 가능성이 점점 커진다. 단순히 행운과 함께 오는 성과가 아니라 얼마만큼 실력을 발휘하느냐를 성공의 척도로 삼아야 한다. 외부 여건을 통해서 만족감과 성취감을 느껴서는 안 된다. 사업으로 얼마나 성공을 거뒀는지가 아니라 내가 어떤 일을 하는지, 내가 어떤 사람인지에 그 토대를 두어라. 세상에는 통제할 수 없는 부분이 있다는 것을 깨닫지 못하면 심각한 실수를 저지르고, 자원을 엉뚱하게 쓰며 시간을 결국 낭비할 것이다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 251p] 만약 당신이 똑똑하면 위험부담이 15~20퍼센트 정도 감소한다. 하루에 24시간 일한다면 15~20퍼센트 정도 감소한다. 나머지 60~70퍼센트의 위험부담은 당신이 절대로 통제할 수 없는 부분이다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 248p] 밸리는 실패의 가능성을 최소화하거나 아예 없애기 위해서 위험 수위를 조절하기보다는 성공 가능성을 극대화하는 것에 집중한다. 실패는 성공을 위해 거쳐야 하는 부분이다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 232p] 기차를 제시간에 맞게 도착시키는 관리자의 역할보다 리더로서의 업무가 나는 더 마음에 들었다. 리더의 묘미는 계산기를 두드리고 생산라인을 개선하는 방법을 찾는 것에 있지 않았다. 사람들이 한계를 넘어설 수 있도록 용기를 북돋고, 사람들이 위대해질 수 있도록 자극을 주며 나보다 더 잘할 수 있는 사람에게 그 일을 맡기며, 또한 사람들이 조화롭게 업무를 수행할 수 있도록 돕는 데 있었다. 그게 수준 높다 할 수 있는 기술이었다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 225p] 벤처기업은 팀원들을 결속시켜 감화시킬 수 있는 리더가 필요하다. <중략> 관리와 리더십은 서로 공통점이 있기는 하지만 같은 건 아니다. 편협한 사고방식을 가지고 있는 사람은 그 차이를 알 수 없다. 관리는 체계적인 과정을 말하는데 그 목적은 정해진 시간과 예산 내에서 원하는 결과를 낳는 것이다. 리더십은 인격과 비전으로 다른 사람을 불가능한 일에 도전하도록 만든다. 관리는 리더십을 보완하고 지원하지만, 리더십을 내포하지 않은 관리는 아무것도 할 수 없다. 리더는 아랫사람들의 의혹을 해소시키고 불완전한 정보를 가지고도 나아갈 수 있도록 만들어야 한다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 205p] 당연히 사업이란 돈에 관한 일이다. 사업을 만들어 내는 동기이기도 하다. 하지만 본질적으로 성공을 하려면 사업은 사람에 관한 것이어야 한다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 186p] 비즈니스 환경은 늘 변한다. 사람들은 전략과 수익모델을 변화하는 환경에 맞게 지속적으로 재검토하고 필요에 따라 수정해야 한다. 하지만 수정할 때마다 기준으로 삼아야 하는 것은 기업의 큰 비전이다. 긴급한 상황을 모면하기 위해 구성원의 감동을 이끌어내는 비전을 포기하면, 나침반 없이 남겨지는 것과 다를 바 없다. 나는 기업의 위치를 돌아볼 때 현재 상황만 따지는 것이 아니라 목표와 방향 점검도 병행돼야 한다는 충고를 늘 하고 있다.<br>
+    나침반을 맞추고 길을 따라 나아가라. 그래야 장애물에 걸려 넘어지더라도 방향 감각을 유지할 수 있을 것이다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 185p] 스컬리가 이끌던 애플은 비전보다 당장의 수익모델을 우선시했다. 단순한 수익모델이 애플의 구심점이 돼서는 안 되는 것임에도 말이다. 수익모델은 비전의 실현을 위한 그 순간의 최선책에 불과하다. 수익모델은 시장의 변화에 따라서 달라질 수 있고, 또한 수시로 달라져야 한다. 결국 갖춰야 할 비전이 사라지자 관련 시장과 애플의 직원들은 회사를 지지할 이유를 찾지 못했다. 그들의 열정적이었던 모습은 여러가지 모순으로 퇴색되어 갔다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 163p] 평생 한 가지 일에만 매달리라는 뜻이 아니었습니다. 내일 당장 숨을 거두게 된다면 오늘 어떤 일을 하고 싶을지 생각해 보라는 뜻이었습니다. 의지와 열정을 혼동하지 마십시오. 의지는 떠밀려 가는 것을 말합니다. 의무감과 책임감 때문에 말입니다. 열정은 본래의 자신과 일치되는 일을 하고 있을 때 느끼는 유대감 같은 것이지요. 열정이 있어야 어려운 시기도 극복할 수 있습니다.<br>
+    MBA에서 가끔 강의를 할 때 저는 이런 말을 합니다. 비즈니스를 가치 있게 만드는 것은 재정이 아닌 애정이라고요.<br>
+    Funerals.com에도 그 자체만으로도 힘이 되는 무엇이 있어야 어떤 역경이 닥치더라도 딛고 일어설 수 있습니다. 제 경험을 말씀 드리자면 돈을 벌 수 있다는 희망이나 기대는 그런 역할을 하지 못합니다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 150p] 열정이란, 저항할 수조차 없이 어떤 것으로 당신 자신을 끌어가는 것을 말한다. 반면 의지란, 책임감 또는 해야만 한다고 생각되는 일에 의해 떠밀려가는 것이다. 만약 자신에 대해 아무것도 모른다면 그 차이를 알 수 없다. 조금이나마 자기 인식을 하고 있는 사람은 내가 어떤 분야에 열정을 가지고 있는지 알 수가 없다. 어떤 목표를 달성하고 싶다는 욕망은 열정이 아니며, 일정 수준의 몫이나 보너스, 또는 회사를 매각하여 현금을 벌고 싶다는 욕심도 열정이 아니다. 다른 사람의 성취를 따라 하기 위해 노력하는 것도 열정이 아니다. 그것은 의지에 가깝다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 130p] 나는 이런 일에 재능이 있고 즐거움을 느낀다는 것을 알게 됐다. 백지 한 장을 앞에 놓고 무언가를 구상하는 일에 말이다. 가만히 앉아서 문제를 분석한 다음, 독특한 해결법을 만들어 내는 게 즐거웠따. 육각형 자동차 타이어를 만들어 굴러가게 할 수도 있을 것 같았따. 경험이 없는 분야에 뛰어들어도 두렵지 않았다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 129p] 이 시기를 거치면서 나는 어떤 직업을 선택할까 고민하는 동안 시간도 때우고 돈도 벌 겸 시작했던 일이 뜻밖에도 아주 보람 있고 유익한 일로 변하는 신의 섭리를 알게 됐다. 하지만 당시 생활이 재미있었던 이유는 이런 점 때문이 아니었다. 세 가지 일이 동시에 결합되어 삶의 기쁨과 활력소가 됐기 때문이다. 나는 이 모든 것에 열정을 쏟았었다. 각별하게 관심이 쏠리는 분야는 없었다. 어떤 일이든 하고 있는 동안만큼은 만사를 잊을 정도로 재미가 있었다. 나의 관심사는 모든 분야를 탐험하는 데 있었다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 109p] 나는 기업이 소수의 행운아가 아닌 다수를 위해 사회를 간접적으로 발전시키는 하나의 방법이라고 생각한다. 그 한계를 인정하고, 이를 긍정적으로 활용할 길을 모색해야 한다. 미국에서 기업의 법칙은 물리학의 법칙과 같아서, 태생적으로 선악이 결정되는 것이 아니라 적용하기 나름이다. 기업을 건설적인 방향으로 몰고 갈지, 파괴적인 방향으로 몰고 갈지를 결정하는 주체는 바로 인간이다. 나는 사람들이 이런 사실을 깨닫고 일을 통해 자기 자신을 표현하거나, 직장을 통해 변화할 수 있도록 돕는 역할을 한다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 108-109p] 세월이 지나면서 나는 사업이라는 것이 돈을 버는 게 아니라 창의력을 펼치는 것이라고 생각하게 됐다. 회화나 조각처럼 개인의 재능을 표현하는 캔버스와 같은 것이라고 말이다. 왜냐면 사업의 핵심은 변화이기 때문이다. 사업과 관련이 있는 것들 중에서 변하지 않는 것은 없다. 시장은 달라지고 제품은 발전하며 경쟁사는 동지가 되고 직원들은 들어왔다가 나간다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 97p] 내 경험상, 만약 돈 때문에 이 일을 시작한다면 닭 쫓던 개 신세를 면치 못할 겁니다. 돈은 결코 그렇게 따라오지 않아요. 뭔가가 더 있어야 합니다. 상황이 최악으로 치달을 때 나를 지켜줄 만한 목적의식 같은 것 말이죠. 실패하더라도 이 일에 엄청난 시간과 노력을 쏟을 만한 가치가 있는, 그런 것이 있어야 한단 말입니다.
+    <br><br>
+
+    <a></a>
+    [승려와 수수께끼 10p] 선택의 기회가 주어졌을 때 '안정' 대신 '의미'를 선택하는 것은 누구나 할 수 있는 일은 아니다.
+    <br><br>
+
+    <a></a>
+    [부의 미래 누가 주도할 것인가 265p] 이탈리아 나폴리 가까이에 '쿠마이'라는 한적한 지방이 있습니다. 로마가 이탈리아반도를 제패하기 전 쿠마이는 고대 그리스인의 식민지였습니다. 전설에 의하면 쿠마이의 으슥한 동굴에는 시빌라가 살았습니다. 시빌라는 신탁을 받아 미래를 예언하는 무녀를 뜻합니다. 쿠마이의 시빌라는 로마가 왕정이던 시절 마지막 왕인 타르퀴니우스에게 왕국의 미래에 대해 쓴 아홉 권의 에언서를 가져갔습니다. 시빌라는 "이 아홉 권의 예언서를 사십시오" 하며 타르퀴니우스에게 비싼 값을 불렀습니다.<br>
+    타르쿠ㅟ니우스는 예언서가 탐났지만 금액이 너무 비싸다고 여겨, 사겠다는 답을 하지 않고 머뭇거리기만 했습니다. 그러자 시빌라는 그 자리에서 아홉 권 가운데 세 권을 불태워버렸습니다. 그러고는 남은 여섯 권을 내밀며 왕에게 사라고 말했습니다. 가격은 아홉 권 값과 동일했습니다. 타르퀴니우스가 계속 주저하자 시빌라는 다시 여섯 권 가운데 세 권을 불태워버렸습니다. 그리고 세 권을 아홉 권 값으로 사라고 말했습니다. 타르퀴니우스는 시빌라가 마지막 남은 세 권마저 불태워버릴까 두려워서 허둥지둥 아홉 권 값을 내고 그 세 권을 샀습니다. 시빌라는 군중 속으로 표표히 사라졌고, 왕은 세 권의 예언서를 카피톨리누스 언덕 위 주피터 신전에 보관하면서 국가의 보물로 여겼습니다. 국가의 위기가 닥칠 때마다 예언서를 꺼내어 읽었다고 합니다.<br>
+    (중략) 이 이야기는 우리에게 어떤 교훈을 줄까요? 미래를 예측하는 것도 중요하지만, 그 미래에 이르기까지 남은 시간을 소중히 써야 한다는 것입니다. 미래에 대비하려고 한다면 서둘러 행동해야 합니다. 그러지 못하면, 시간이 지날수록 대비하는 비용은 점점 더 늘언라 수밖에 없습니다.
+    <br><br>
 
     <a></a>
     [부의 미래 누가 주도할 것인가 73p] 부의 흐름이 바뀌는 시기에는 그 길목에서 혁신적 서비스를 만들어내는 주체들이 부의 기회를 잡는다. 앞으로 디지털 자산시장은 폭발적으로 커질 것으로 전망된다. 우리가 주목해야 할 것은 자산시장에서 가치가 창출되는 연쇄적인 흐름이다. 다시 말해 디지털 자산시장의 가치사슬(Value Chain)에 집중해야 한다. 가치사슬의 핵심고리를 선점하고, 시장의 표준을 만들어 공급하는 주체가 디지털 자산시장의 새로운 주도자가 될 것이다.
