--- a/Game_and_reality.html
+++ b/Game_and_reality.html
@@ -61,6 +61,44 @@
   <br><br><br><br><br>
 
 
+
+
+
+
+
+
+
+
+  <a></a>
+  [메타버스 328-329p] 대부분 메타버스의 시스템은 벌금, 처벌, 비난 등의 '빼기'가 아닌 상금, 레벨업, 축하 등의 '더하기'로 설계되어 있습니다. 그래서 우리는 그 세계의 상호작용을 좋아합니다. 빼기 구조인 현실 세계를 더하기로 바꾸는 게 좋을까요? 아니면 현실 세계의 구조와 비슷하게 메타버스 세계를 빼기로 바꾸는 게 좋을까요? 빼기가 싫어서 더하기를 찾아 도피를 했다고 보기에는 현실 세계에 지나치게 많은 빼기가 있습니다. 사람들은 더하기가 많은 메타버스 세계에서 더 많은 도전을 꿈꿉니다. 빼기보다는 더하기를 중심으로 탐험하고, 소통하고, 성취하고자 합니다.<br>
+  현실 세계에서 무언가 실패하면, 실패에 따라오는 빼기가 우리를 깊은 좌절에 빠지게 하는 경우가 많습니다. 진행하던 프로젝트를 망치거나 낮은 성적을 받으면, 보너스가 깎이거나 부모님이 던지는 비난을 견뎌야 합니다. 반면에 메타버스에서는 무언가를 실패해도 빼기를 하지 않습니다. 오히려 한 번 더 해보라고 부추깁니다. 그 상황에서 실패에 대한 경험은 우리에게 오히려 더 강력한 도전 동기를 제공합니다. 이를 좌절 효과(frustration effect)라 합니다. 현실 세계와 메타버스, 이 둘 모두는 우리에게 좌절 효과를 불러일이키는 도전의 세계여야 합니다.
+  <br><br>
+
+  <a></a>
+  [메타버스 238-239p] 독일의 시인이자 극작가 프리드리히 본 실러는 '인간의 미적 교육에 관한 편지'에서 이런 얘기를 했습니다. 인간은 여러 가지 육체적, 물질적 욕망과 이성적, 도덕적 욕망을 동시에 가진 존재인데, 우리에게 잠재된 놀이 충동이 이 둘을 조화시킨다고 했습니다. 인간은 놀이를 통해 자유로워지며, 아름다운 존재가 됩니다. 자유와 아름다움을 깨달은 인간만이 참된 목적을 추구할 수 있습니다. 또한, 철학자 칸트는 놀이가 즐겁고 편한 이유는 아무런 목적이 없기 때문이라 했습니다. 가상 세계 메타버스에서 우리 아이들이 목적 없이 편하게 놀도록 곁에서 지켜봐주시고, 어른들도 함께 목적 없이 놀면 좋겠습니다. 그러다 보면 우리는 자유롭고 아름다운 인간이 추구해야 할 목적을 더 찾아낼 것입니다.
+  <br><br>
+
+  <a></a>
+  [메타버스 230p] 인간의 뇌는 크게 세 가지 감정을 추구합니다. 세 가지 감정은 지배, 자극, 균형입니다.(뇌, 욕망의 비밀을 풀다 - 출처 표시 안함) 지배는 경쟁에서 이기거나 누군가를 물리치는 행동, 남에게 무언가를 지시하는 행동에서 느끼는 만족감입니다. 자극은 새로운 음악, 명상을 즐기거나 낯선 곳으로 여행을 가는 경험, 새로운 사람을 사귀는 만남 등에서 얻는 탐색, 발견과 관련된 감정입니다. 균형은 안정감을 유지하고 싶은 감정입니다. 위험한 상황, 무서운 것, 불확실한 조건 등을 피하고 싶은 마음입니다.<br>
+  단순히 보면 우리가 메타버스에 올라타는 이유는 이런 세 가지ㅏ 감정 중 일부 또는 전체를 현실 세계에서 충분히 느끼지 못하고 잇기 때문입니다.
+  <br><br>
+
+  <a></a>
+  [메타버스 214p] 가상 세계에 머무는 이가 아이이건 어른이건, 이유는 비슷합니다. 현실에서 느끼는 탐험, 소통, 성취의 기쁨이 질 또는 양적인 측면에서 어딘가 부족하여 갈증을 느끼기 때문입니다.
+  <br><br>
+
+  <a></a>
+  [메타버스 103p] 좋은 일에 칭찬을 듣고, 나쁜 일에 위로를 받고 싶은 자연스러운 마음을 너무 억누르지 않으면 좋겠습니다. 외적인 보상, 자극 또는 타인과의 소통 없이 스스로 다독이는 능력도 중요하지만, 하루도 평온하지 않은 21세기를 살아가는 우리에게는 더 큰 인내력보다 좀 더 충분한 칭찬과 위로가 필요하지 않을까 생각합니다.
+  <br><br>
+
+  <a></a>
+  [메타버스 71p] 증강현실이라고 해서 꼭 렌즈, 스마트폰 앱 같은 하이테크를 동원하지 않아도 됩니다. 중요한 것은 어떻게 하면 현실에 무언가를 덧씌워서 사람들의 감각, 경험, 생각을 증강하거나 다른 곳으로 이끌 수 있는가입니다.(중략) 증강현실 메타버스가 현실 세계의 규칙, 법을 그대로 따르지 않아도 괜찮습니다. 현실의 규칙, 법에 반하더라도 증강현실 메타버스 세상 속 구성원 모두에게 득이 되도록 작동하면 됩니다. 다만, 증강현실 메타버스 속에서 벌어진 일들이 현실 세계에 피해를 주지 않으면 됩니다.
+  <br><br>
+
+  <a></a>
+  [메타버스 66p] 메타버스 구현에 과학, 공학적 요소가 필요하기는 합니다. 그러나 코카콜라가 만들어낸 메타버스를 볼 때 과학, 공학적 요소가 메타버스의 전부가 아님을 잊지 말아야 합니다. 인문학적 감수성과 철학이 담겨있지 않다면 증강현실 메타버스는 단순히 신기술의 전시장이 될 뿐입니다.
+  <br><br>
+
   <a></a><a></a>
   <br>
   [Stone of Jordan Farming](+2EXP)<br>
