--- a/The_economist.html
+++ b/The_economist.html
@@ -66,6 +66,25 @@
 
 
 
+
+  <a></a>
+  [부의 미래 누가 주도할 것인가 265p] 이탈리아 나폴리 가까이에 '쿠마이'라는 한적한 지방이 있습니다. 로마가 이탈리아반도를 제패하기 전 쿠마이는 고대 그리스인의 식민지였습니다. 전설에 의하면 쿠마이의 으슥한 동굴에는 시빌라가 살았습니다. 시빌라는 신탁을 받아 미래를 예언하는 무녀를 뜻합니다. 쿠마이의 시빌라는 로마가 왕정이던 시절 마지막 왕인 타르퀴니우스에게 왕국의 미래에 대해 쓴 아홉 권의 예언서를 가져갔습니다. 시빌라는 "이 아홉 권의 예언서를 사십시오" 하며 타르퀴니우스에게 비싼 값을 불렀습니다.<br>
+  타르퀴니우스는 예언서가 탐났지만 금액이 너무 비싸다고 여겨, 사겠다는 답을 하지 않고 머뭇거리기만 했습니다. 그러자 시빌라는 그 자리에서 아홉 권 가운데 세 권을 불태워버렸습니다. 그러고는 남은 여섯 권을 내밀며 왕에게 사라고 말했습니다. 가격은 아홉 권 값과 동일했습니다. 타르퀴니우스가 계속 주저하자 시빌라는 다시 여섯 권 가운데 세 권을 불태워버렸습니다. 그리고 세 권을 아홉 권 값으로 사라고 말했습니다. 타르퀴니우스는 시빌라가 마지막 남은 세 권마저 불태워버릴까 두려워서 허둥지둥 아홉 권 값을 내고 그 세 권을 샀습니다. 시빌라는 군중 속으로 표표히 사라졌고, 왕은 세 권의 예언서를 카피톨리누스 언덕 위 주피터 신전에 보관하면서 국가의 보물로 여겼습니다. 국가의 위기가 닥칠 때마다 예언서를 꺼내어 읽었다고 합니다.<br>
+  (중략) 이 이야기는 우리에게 어떤 교훈을 줄까요? 미래를 예측하는 것도 중요하지만, 그 미래에 이르기까지 남은 시간을 소중히 써야 한다는 것입니다. 미래에 대비하려고 한다면 서둘러 행동해야 합니다. 그러지 못하면, 시간이 지날수록 대비하는 비용은 점점 더 늘어날 수밖에 없습니다.
+  <br><br>
+
+  <a></a>
+  [부의 미래 누가 주도할 것인가 73p] 부의 흐름이 바뀌는 시기에는 그 길목에서 혁신적 서비스를 만들어내는 주체들이 부의 기회를 잡는다. 앞으로 디지털 자산시장은 폭발적으로 커질 것으로 전망된다. 우리가 주목해야 할 것은 자산시장에서 가치가 창출되는 연쇄적인 흐름이다. 다시 말해 디지털 자산시장의 가치사슬(Value Chain)에 집중해야 한다. 가치사슬의 핵심고리를 선점하고, 시장의 표준을 만들어 공급하는 주체가 디지털 자산시장의 새로운 주도자가 될 것이다.
+  <br><br>
+
+  <a></a>
+  [부의 미래 누가 주도할 것인가 22p] 코인은 비트코인처럼 토큰의 화폐 성격을 강조하는 취지의 이름이지만, 본질적으로는 토큰과 다른 말이 아닙니다. 블록체인 시스템으로 만드는 코인은 모두 암호토큰 또는 디지털 토큰입니다. 단 토큰의 성격에 따라 세 가지로 구분할 수 있습니다. 첫째는 지급 결제 토큰입니다. 영어로는 페이먼트 토큰입니다. 암호화폐 비트코인이나 이더리움은 완전한 범용은 아니지만 범용에 가까운 지급수단으로 사용됩니다. 둘째는 이용권 토큰입니다. 영어로는 유틸리티 토큰입니다. 우리가 테마파크에 놀러갔을 때 팔목에 두르거나 몸에 붙이는 스티커가 이용권을 대신하는 것처럼, 플랫폼 내에서 이용권으로 사용하는 토큰입니다. 레시피 공유 플랫폼인 '해먹'에서 사용하는 토큰인 '힌트'가 한 사례입니다. 셋째는 증권 토큰, 곧 시큐리티 토큰입니다. 증권토큰은 투자한 자산에 대한 권리를 나타냅니다. 그 권리에는 소유 지분권, 수익권, 투표권 등이 있습니다. 일반적으로 그 자산의 가치가 상승했을 때 보유한 토큰량에 따라 수익 배당을 받게 됩니다.
+  <br><br>
+
+  <a></a>
+  [부의 미래 누가 주도할 것인가 21p] 저는 암호화폐, 암호자산은 본질적으로 토큰이라고 생각합니다. 토큰은 실제 화폐나 실제 가치를 가진 대상의 대용물 또는 증표입니다. 형태를 놓고 보면 암호토큰이나 디지털 토큰이 가장 올바른 이름입니다. 암호토큰이 화폐의 기능을 일부 수행하거나 사회적으로 화폐로 받아들여진다면 암호화폐가 되고, 투자 가치를 인정받고 자산으로 여겨진다면 암호자산이 됩니다. 암호토큰, 암호화폐, 암호자산 등 명칭은 맥락에 따라 판단할 필요가 있습니다.
+  <br><br>
+
   <a href="https://www.youtube.com/watch?v=NkM_XCtsjrc" target="_blank" title="자유잍튜브THE">
     물만난 중국. 중국 양털깍기에 동참할텐가?</a><br>
 
