--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -63,6 +63,31 @@
   모든 행위의 과정에는 위험이 도사리고 있다. 그러므로 신중하다는 것은 위험을 피하는 데 있는 게 아니라, 위험도를 판단하여 결단력 있게 행동하는 데 있다.
   <br><br>
 
+
+
+
+
+
+
+
+  <a href="https://www.youtube.com/watch?v=3JevwIGlKHE" title="Destiny(데스티니)">
+    데교수의 모르가나 특별 강의</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ho6SLVNGSnw" title="Destiny(데스티니)">
+    데교수의 필수시청 특별강의 【 사기시야편 】</a><br>
+
+  <a href="https://www.youtube.com/watch?v=7g2_EU4Y94c" title="Destiny(데스티니)">
+    서폿을위한 키세팅 + 꿀와드 위치 강의</a><br>
+
+  <a href="https://www.youtube.com/watch?v=i8xmAig7iQo" title="Destiny(데스티니)">
+    데교수의 【 빙결 강화 】 쓰레쉬 특별 강의</a><br>
+
+  <a href="https://www.youtube.com/watch?v=icP9GdPoMnA" title="Destiny(데스티니)">
+    데교수의 【 저녁갑주 】 레오나 특별 강의</a><br>
+
+  <a href="https://www.youtube.com/watch?v=f9EZqpVhL6U" title="Destiny(데스티니)">
+    서폿론에 대한 데스티니의 생각</a><br><br>
+
   <a href="https://www.youtube.com/watch?v=q4Urs9b2RbY" title="인문채널휴 HUE">
     [임용한의 전쟁사] 한국사 최고의 전술과 전투(6): 관음포 해전</a><br>
 
