--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -80,10 +80,21 @@
 
 
 
+    <a></a>
+    [리얼리티 트랜서핑1 101p] 대부분의 사람들은 삶 속에 원치 않은 사건이 일어날 때, 그것을 적대시한다. 우리가 원치 않은 사건이란 대개 원래의 시나리오에 없는 사건이다. 그리고 이 반대의 경우도 성립한다. 우리는 뭔가가 자신의 기대에 부합할 때만 그것이 성공적이라고 믿는다.
+    <br><br>
 
+    <a></a>
+    [리얼리티 트랜서핑1 100p] 자신과, 그리고 주변 세상과 사이좋게 지내면 당신은 조화로운 에너지를 주위에 퍼뜨린다. 당신은 주위에 조화로운 파동의 세계를 창조한다. 그 안에서는 모든 것이 성공적으로 이루어진다. 긍정적인 태도는 언제나 성공과 창조를 일궈낸다.
+    <br><br>
 
+    <a></a>
+    [리얼리티 트랜서핑1 99p] 우리는 마음속에 그 작은 축제의 불꽃을 늘 지펴놓을 필요가 있고, 그 느낌을 소중히 간직해야 한다. 그저 삶이 어떻게 더 나아지는지를 지켜보라. 작은 기쁨의 실오라기를 붙잡고, 모든 곳, 모든 것에서 행복의  손짓을 발견해내라. 이것은 최소한 지루하지는 않을 것이다. 트랜서핑을 하면서 보내는 매 순간들이 당신을 꿈을 향해 의식적으로 다가가게 하고 있으며, 그것은 곧 당신이 자신의 운명을 운전하고 있다는 것을 뜻함을 기억하라. 이렇게 상기하는 것만으로도 평온과 확신과 기쁨이 서서히 스며오는 것을 느낄 수 있을 것이다. 그러면 당신은 언제나 휴일이다. 휴일의 느낌을 즐기는 습관이 몸에 배면 당신은 언제나 성공의 물결을 타고 있을 것이다.
+    <br><br>
 
-
+    <a></a>
+    [리얼리티 트랜서핑1 98p] 이 모든 것의 결론은 아주 단순명료하다. 당신은 언제나 자신이 방사하는 에너지에 상응하는 인생트랙 위에 놓이게 된다는 것이다. 부정적인 에너지를 허용하면 삶 속에 불쾌한 일들이 일어날 것이다. 부정적인 에너지를 허용하면 삶 속에 불쾌한 일들이 일어날 것이다. 부정적인 에너지를 방사하면 그 에너지는 부메랑처럼 당신에게 되돌아오는데, 그것도 골칫거리가 돼서 돌아온다.
+    <br><br>
 
     <a></a>
     [리얼리티 트랜서핑1 95-96p] 당신은 당신이 방사하는 사념 에너지의 주파수가 바뀔 때까지 거기에 갇혀 있는 것이다. 그러나 주파수를 바꾸는 것은 별로 어려운 일이 아니다.<br>
@@ -224,7 +235,7 @@
 
     <a></a>
     [아들러의 인간이해 242-243p] 그러므로 이 사람들의 마음속에는 적대적인 성향이 매우 많이 내재되어 있다. 그래서 그들은 다른 사람의 고통을 매우 쉽게 받아들이고 그것들을 본체만체하는 성향을 나타낸다. 인간에 대한 통찰력으로 빛났던 라 로슈푸코가 대부분의 사람들에게서 그런 성향을 발견할 수 있다고 말한 것처럼 그들은 다른 사람의 고통을 매우 쉽게 참아낸다. 또 아주 날카롭고 비판적인 어투로 자신의 적대감을 표출하고, 어떤 것도 좋게 보는 법이 없으며, 모든 것을 조롱과 비방거리로 삼고, 혼자만 옳다고 하며, 모든 것을 비난한다. 우리가 이미 말한 바 있듯이 나쁜 것을 아는 것만으로는 충분치 않고 그것을 좀 더 개선하기 위해 자기 자신은 어떻게 할 수 있는지 자문해야 한다.<br>
-    허영심 있는 성격은 그저 남들을 단번에 일축하고 신랄하게 조롱하고 비판하는 것만응로 만족한다. 심지어 그들은 그런 일에 매우 많은 연습이 되어 있을 정도다. 이 사람들은 놀랄 정도의 민첩성으로 아주 멋진 위트를 날리기도 한다. 위대한 풍자가들의 경우에서 보듯이 그들은 모든 것에서 위트와 민첩성을 보이기 때문에 때때로 다른 사람에게 상처를 주기도 하지만 거기에서 예술을 창조하기도 한다. 던져버리는 듯한, 깔아뭉개 버리는 그 방법은 이런 성격을 가진 사람들이 매우 자주 쓰는 표현 방법이며 평가절하 성향이라고 부르는 것이다. 어떤 사람에게는  공격 포인트가 되는 것이 다른 사람에게는 의미고 가치다. 그것은 다른 사람의 가치를 떨어뜨림으로써 자신의 우월감을 느끼고자 하는 시도로 볼 수 있다. 무언가의 가치를 인정하는 것이 그에게는 모욕으로 느껴진다. 바로 그로부터 그 사람의 내면 깊은 곳에 자리하고 있는 허약함을 추론할 수 있는 것이다.
+    허영심 있는 성격은 그저 남들을 단번에 일축하고 신랄하게 조롱하고 비판하는 것만으로 만족한다. 심지어 그들은 그런 일에 매우 많은 연습이 되어 있을 정도다. 이 사람들은 놀랄 정도의 민첩성으로 아주 멋진 위트를 날리기도 한다. 위대한 풍자가들의 경우에서 보듯이 그들은 모든 것에서 위트와 민첩성을 보이기 때문에 때때로 다른 사람에게 상처를 주기도 하지만 거기에서 예술을 창조하기도 한다. 던져버리는 듯한, 깔아뭉개 버리는 그 방법은 이런 성격을 가진 사람들이 매우 자주 쓰는 표현 방법이며 평가절하 성향이라고 부르는 것이다. 어떤 사람에게는  공격 포인트가 되는 것이 다른 사람에게는 의미고 가치다. 그것은 다른 사람의 가치를 떨어뜨림으로써 자신의 우월감을 느끼고자 하는 시도로 볼 수 있다. 무언가의 가치를 인정하는 것이 그에게는 모욕으로 느껴진다. 바로 그로부터 그 사람의 내면 깊은 곳에 자리하고 있는 허약함을 추론할 수 있는 것이다.
     <br><br>
 
     <a></a>
@@ -245,12 +256,12 @@
     <a></a>
     [아들러의 인간이해 235-236p] 일반적으로 이런 사람들 옆에 있는 사람들은 매우 나쁜 상황에 처한다. 그들은 항상 사람들이 끄집어 내는 비판의 대상이 된다. 허영쟁이들은 보통 잘못된 일에 대한 책임을 자기가 지지 않으려 하며 남에게 그것을 전가한다. 자기들은 항상 옳고 남들은 항상 부당하다고 주장한다. 그러나 삶에서 누가 옳으냐의 문제는 의미가 없고, 중요한 것은 자신의 일을 성취시켜 나가고 다른 사람의 일을 도와서 그것을 완성하는 일이다. 그러나 그들의 입에서는 항상 호소하는 소리와 변명하는 소리만 흘러나온다.<br>
     여기에서 문제가 되는 것은 인간 정신이 만들어 내는 인위적인 책략으로서 자신의 허영심이 손상되지 않도록 보호하기 위한 시도들이다. 그럼으로써 그들은 자신이 우월하다는 느낌이 무사히 남아 흔들리지 않기 위한 시도를 수없이 반복한다.<br>
-    가끔 인간의 위대한 업적 중에 허영심이 없었다면 달성하지 못했을 것들도 많았을 것이라는 이의를 듣게 된다. 그것은 잘못된 생각에 바탕을 둔 허상이고, 잘못된 전망이다. 허영심에서 자유로우누 인간은 아무도 없기 때문에 누구나 조금씩은 그런 성향을 보일 수 있다. 그러나 그에게 보편적 유익을 향하거나 커다란 업적을 수행할 수 있는 힘을 주는 것은 확실히 허영심이 아니다. 그 업적은 오직 공동체 의식을 통해서만 이루어질 수 있다. 공동체에 어느 정도라도 도움이 되지 않는 천재적인 과업은 불가능하다. 여기에서의 전제 조건은 전체와의 연대, 또 그것을 촉진시키려고 하는 의지다. 그렇지 않으면 그런 성과를 이루었다고 하더라도 가치를 부여할 수 없다. 거기에 어떤 허영심이 관여되어 있었다면 그것은 확실히 상황을 교란시키고 가치를 저하시킬 뿐이다. 그리고 그 영향은 그리 크지 않았을 것이다.
+    가끔 인간의 위대한 업적 중에 허영심이 없었다면 달성하지 못했을 것들도 많았을 것이라는 이의를 듣게 된다. 그것은 잘못된 생각에 바탕을 둔 허상이고, 잘못된 전망이다. 허영심에서 자유로운 인간은 아무도 없기 때문에 누구나 조금씩은 그런 성향을 보일 수 있다. 그러나 그에게 보편적 유익을 향하거나 커다란 업적을 수행할 수 있는 힘을 주는 것은 확실히 허영심이 아니다. 그 업적은 오직 공동체 의식을 통해서만 이루어질 수 있다. 공동체에 어느 정도라도 도움이 되지 않는 천재적인 과업은 불가능하다. 여기에서의 전제 조건은 전체와의 연대, 또 그것을 촉진시키려고 하는 의지다. 그렇지 않으면 그런 성과를 이루었다고 하더라도 가치를 부여할 수 없다. 거기에 어떤 허영심이 관여되어 있었다면 그것은 확실히 상황을 교란시키고 가치를 저하시킬 뿐이다. 그리고 그 영향은 그리 크지 않았을 것이다.
     <br><br>
 
     <a></a>
     [아들러의 인간이해 232p] 인간의 성격은 우리에게 있어서 도덕적인 판단 근거가 될 수 없고, 그 사람이 자신의 주위 환경에 어떤 영향을 미치는가, 또 어떤 연관성 속에 처해 있는가 하는 사회적 인식의 맥락에서 파악되어야 한다.<br>
-    이런 사고 과정을 계속하는 동안 우리는 다음 두 가지 보편적이고 인간적인 현상과 만나게 된다. 하나는 어디에서나 발견할 수 있는 것으로, 사람과 사람 사이를 연결해 주는 공동체 의식이다. 그거승ㄴ 우리 문화의 위대한 능력이 창조해 낸 것이고, 우리가 정신생화르이 여러 현상을 평가하는 기준이며 각 개인의 공동체 의식의 크기를 측정할 수 있게 해 준다. 누군가가 다른 사람들과의 연대 속에 있을 때 그가 인간애를 어떻게 표현하는지, 그것들이 그으 ㅣ삶을 얼마나 보람 있게 활기차게 만드는지 알게 되면 우리는 인간의 영혼에 대해 매우 조형적인 인상을 얻게 된다 결과적으로 우리는 다음과 같이 확인하기에 이르렀다. 공동체 의식에 적대적이고 부정적인 영향을 가장 크게 미치는 힘은 권력 욕구와 우월성을 향한 욕망이다.<br>
+    이런 사고 과정을 계속하는 동안 우리는 다음 두 가지 보편적이고 인간적인 현상과 만나게 된다. 하나는 어디에서나 발견할 수 있는 것으로, 사람과 사람 사이를 연결해 주는 공동체 의식이다. 그것은 우리 문화의 위대한 능력이 창조해 낸 것이고, 우리가 정신생활의 여러 현상을 평가하는 기준이며 각 개인의 공동체 의식의 크기를 측정할 수 있게 해 준다. 누군가가 다른 사람들과의 연대 속에 있을 때 그가 인간애를 어떻게 표현하는지, 그것들이 그의 삶을 얼마나 보람 있게 활기차게 만드는지 알게 되면 우리는 인간의 영혼에 대해 매우 조형적인 인상을 얻게 된다 결과적으로 우리는 다음과 같이 확인하기에 이르렀다. 공동체 의식에 적대적이고 부정적인 영향을 가장 크게 미치는 힘은 권력 욕구와 우월성을 향한 욕망이다.<br>
     이 두 가지 관점에서 보면 사람들간의 차이는 공동체 의식의 크기와 권력에 대한 욕망의 크기에 의해 결정된다는 것이며, 이들은 서로에게 영향을 준다는 것을 확인할 수 있었다. 우리가 성격이라고 부르는 것들은 이 두 힘간의 게임이며, 그 상호 작용이 밖으로 표현된 외적인 현상이다.
     <br><br>
 
@@ -289,7 +300,7 @@
     <br><br>
 
     <a></a>
-    [아들러의 인간이해 37p] 이처럼 모든 인간의 활동이 향하는 목표는 호나경이 어린아이에게 전달하는 모든 영향과 인상에 의해 결정된다. 각 개인의 이상, 다시 말해 목표는 아마도 유년 시절으 ㅣ처음 몇 개월에 형성되는 것 같다. 바로 그 시기에 어린아이에게 기쁨이나 불쾌한 반응을 일으키는 어떤 감각이 역할을 하는 것이다. 여기서 매우 원시적인 형태이긴 하지만, 세계상의 첫 번째 흔적과 그 세계상에 대한 아이의 태도가 표면으로 떠오른다. 우리가 접근할 수 있는 정신생활에 영향을 주는 요소들의 근본 토대는 그 아이가 아직 유아였던 바로 그 시점에 놓인다. 이 기초 위에서 상위 구조들이 만들어지고 수정되기도 하며 영향을 받고 변형된다. 이런 다양한 영향력들은 곧 아이로 하여금 생이 던져 주는 수많은 문제에 대해 자기만의 고유한 반응을 하게 만드는 조건이 되기도 한다.
+    [아들러의 인간이해 37p] 이처럼 모든 인간의 활동이 향하는 목표는 환경이 어린아이에게 전달하는 모든 영향과 인상에 의해 결정된다. 각 개인의 이상, 다시 말해 목표는 아마도 유년 시절의 처음 몇 개월에 형성되는 것 같다. 바로 그 시기에 어린아이에게 기쁨이나 불쾌한 반응을 일으키는 어떤 감각이 역할을 하는 것이다. 여기서 매우 원시적인 형태이긴 하지만, 세계상의 첫 번째 흔적과 그 세계상에 대한 아이의 태도가 표면으로 떠오른다. 우리가 접근할 수 있는 정신생활에 영향을 주는 요소들의 근본 토대는 그 아이가 아직 유아였던 바로 그 시점에 놓인다. 이 기초 위에서 상위 구조들이 만들어지고 수정되기도 하며 영향을 받고 변형된다. 이런 다양한 영향력들은 곧 아이로 하여금 생이 던져 주는 수많은 문제에 대해 자기만의 고유한 반응을 하게 만드는 조건이 되기도 한다.
     <br><br>
 
     <a></a>
@@ -338,7 +349,7 @@
     <br><br>
 
     <a></a>
-    [아들러의 인간이해 18-19p] 정신생활의 개별 현상들은 그 자체로서 충분히 완벽한 전체로 간주해서는 안 된다. 서로 따로 떼어놓을 수 없는, 전체 속의 부분들로 이해할 때 그에 대한 완전한 이해에 도달할 수 있다. 그리고 한 인간을 이끌어 가는 활동 궤도, 삶의 방식, 자세 등을 발견했으며, 유년기 삶의 방식의 목표가 성숙한 후의 목표와 정확하게 일치한다는 사실을 확인할 수 있었다. 간단히 말해, 심리적 움직임이라는 관점에서 볼 때 삶의 방식에 어떤 변화도 일어나지 않았다는 것이 놀라우리만치 확실했다. 외부적인 형태나 구체적인 방식, 어떤 심리 현상의 언어적 표현은 조금 변했을지 몰나 최종 목표로 향햐는, 정신생활을 결정하는 근본 토대나 목표, 리듬, 역동성, 그 밖의 모든 것은 불변인 채로 그대로라는 것이다.
+    [아들러의 인간이해 18-19p] 정신생활의 개별 현상들은 그 자체로서 충분히 완벽한 전체로 간주해서는 안 된다. 서로 따로 떼어놓을 수 없는, 전체 속의 부분들로 이해할 때 그에 대한 완전한 이해에 도달할 수 있다. 그리고 한 인간을 이끌어 가는 활동 궤도, 삶의 방식, 자세 등을 발견했으며, 유년기 삶의 방식의 목표가 성숙한 후의 목표와 정확하게 일치한다는 사실을 확인할 수 있었다. 간단히 말해, 심리적 움직임이라는 관점에서 볼 때 삶의 방식에 어떤 변화도 일어나지 않았다는 것이 놀라우리만치 확실했다. 외부적인 형태나 구체적인 방식, 어떤 심리 현상의 언어적 표현은 조금 변했을지 모르나 최종 목표로 향하는, 정신생활을 결정하는 근본 토대나 목표, 리듬, 역동성, 그 밖의 모든 것은 불변인 채로 그대로라는 것이다.
     <br><br>
 
     <a></a>
